--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -221,9 +221,9 @@
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 翻方言
-　　在我來看，有關翻方言這問題，似乎是最莫衷一是的。從保羅的話看來，他顯然認為哥林多信徒的方言是帶有可翻出來的意義的（—四 19-13），而今天的翻方言者對今天的方言亦有相同的假設，把他們對方言的解釋視為方言的實際翻譯。
+　　在我來看，有關翻方言這問題，似乎是最莫衷一是的。從保羅的話看來，他顯然認為哥林多信徒的方言是帶有可翻出來的意義的（林前一四9-13），而今天的翻方言者對今天的方言亦有相同的假設，把他們對方言的解釋視為方言的實際翻譯。
 
-　　那些流暢、肯定而又自然流露出來的解釋，後來卻被證實是千篇一律、含糊不清和無所傳達的。我不會妄自憑幾句翻譯錯誤的例子作為基礎，去全盤否定所有方言的解釋，看他們為虛妄的，同時，我同意撒瑪連（Samarin）的意見，他認為說方言加上翻方言的宗教儀式所產生的團結友愛本身可以是有價值的。 29 但我想，因此就假設我們已重獲保羅所說的翻方言恩賜，卻是十分危險的。無他，事實的證據委實太不肯定了。
+　　那些流暢、肯定而又自然流露出來的解釋，後來卻被證實是千篇一律、含糊不清和無所傳達的。我不會妄自憑幾句翻譯錯誤的例子作為基礎，去全盤否定所有方言的解釋，看他們為虛妄的，同時，我同意撒瑪連（Samarin）的意見，他認為說方言加上翻方言的宗教儀式所產生的團結友愛本身可以是有價值的。但我想，因此就假設我們已重獲保羅所說的翻方言恩賜，卻是十分危險的。無他，事實的證據委實太不肯定了。
 
 　　賀其馬提出當說方言帶來祝福的時候，祝福的源頭「並不是方言本身，而是說方言時候的心境，或者說……在方言說出之先，一顆尋求更多被聖靈充滿的心。」 同樣，翻方言也可以帶來祝福，是由於他傳達了聖經的激勵。
 
@@ -251,7 +251,7 @@
 
 　　最後，預言應對人的行為產生的唯一影響，就是驅使人作好心理準備，以迎接預言的應驗，同時也準備好面對預言的不應驗。可是，行動的準則，必須是神啟示的話語和靠這話語管理生命的智慧。
 
-　　我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
+　　我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復甦，這樣的想法是不正確的。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#預言的恩賜][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
