--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -340,6 +340,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　我想在開始的時候，我們最好看看聖靈的名稱及注意他蘊含的意義。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#2_聖經裏的聖靈][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 神的靈
 　　今天，對於大多數人來說，靈（SPirit）是一個含糊褪色的字彙。英文 spirit 這個字最易令人聯想起人的情緒或態度（如 high or low spirits「情緒高漲或情緒低落」，animal spirits「輕快精神」，a cheerful or downcast spirit「高興或沮喪」，aspirit of mischief or kindness［惡作劇或和藹的態度」等等）。從前靈這個詞曾用來代表各類游魂和神靈（如天使、魔鬼、神仙、小精靈、妖怪、鬼、孤魂，以及住在山嶺、石頭和樹上的神靈）。因此，在一六九一年，年長的清教徒巴斯特（Richard Baxter）給他那本離奇趣怪、肯定靈界事物的書定名為《靈界的真實》（ The Certainty of the Worlds ofSPiritS）。但人們對這些靈體的信念已逐漸消失，至少在西方是如此。現在，許多人會認為相信各種靈體至少反映出人缺乏哲學性的冷靜。總之，在研究「神的靈」這個主題時，我們的西方文化根本不能給我們什麼幫助。
 
@@ -367,6 +370,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　因此，舊約聖經中那些論到神的靈的經文，其實是見證新約聖經裏聖靈的工作。在以下的討論中，我要以此作為基礎。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#神的靈][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 聖靈的位格
 　　
 *** 聖靈是保惠師
@@ -374,27 +380,48 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　同時，聖靈被描述為會聽、會講、能作見證、使人信服。榮耀基督、帶領、引導、命令、禁止、願望、感動人說話、給予人幫助，用說不出的歎息為信徒祈禱，並親自在信徒的禱告中向神呼求（參約一四 26，一五 26，一六 7—15；徒二 4，八 29，一三 2，一六 6、7；羅八 14、16、26、27；加四 6，五 17、18）；此外，他還會被欺哄，會擔憂（徒五 3、4；弗四 30）。只有具位格的，才能符合以上的描述。所以，聖靈並非單單一種影響力；他像父和子一樣，是有位格的。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈是保惠師][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 聖靈是神
 　　進一步來說，聖靈被描述為一位聖者。他的獨特性包含在合一的神的本體裏。聖靈的「聖」字意味他的神性，好幾段經文都很明確地道出這點。耶穌說他的門徒要受洗歸入神的名（注意：「名」「name」是用單數寫的，因為只有一位神）；他所宣稱的這個名字，是一個具有三重位格的名（tripersonalname）：「奉父子聖靈的名」（太二八19）。（巴特「KarlBarth」很美妙地稱這名為神的「教名」！譯者注：西方早期基督教會的傳統，人領洗歸信基督後，取一聖經人物或聖徒的名字作自己的教名「Christian name」。據舊約希伯來人的觀念，名字代表一個人的身分及他的個人特質。）同樣，約翰寫信給七個教會，開首就說：「但願從那昔在、今在、以後永在的神，和他寶座前的七靈，並那誠實作見證的，從死裏首先復活，為世上君王元首的耶穌基督，有恩惠、平安歸與你們。」（啟一 4—5）在啟示錄裏，「七」象徵神聖圓滿，而「七靈」肯定代表聖靈圓滿的能力和工作（見三 1，四 5，五 6）。且看天父列在首位，子排列第三，而聖靈列在二者之間；毫無疑問，聖靈與其他二者是同等的。確定此事之餘，我們同時發現一連串「三而一」的經文，在恩典的獨一計畫中不可分割的整體裏，聖父、聖子、聖靈連成一體（見林前一二 4— 6；林後一三 14；弗一 3—13，二 18，三 14—19，四 4— 6；提後二 13、14；彼前一 2）。所得的結論是，聖靈絕非單單一個有能力的受造物，像天使一樣；他與父和子同等，是那全能的神。
 
 　　因此，我懇求各位：絕不可用非位格性的辭彙去思想或講論聖靈！有時候，我聽見基督徒用「他」而不是「他」來形容第三位聖者，我感到驚懼，我的心下沉。這在屬靈層次上相當於心理學上的佛洛伊德式口誤，即如有一次我在維真學院（Regent College）分享的資訊中，我本想對學生說：「請謹記，這是一所神學院（seminary）。」但我卻沖口而出說：「請謹記，這是一所墓地（ cemetary）。」當時雖然引來哄堂大笑，但其實我所講的並不是我的意思，我的意思也不是我沖口而出的話。我希望一些聖徒稱聖靈為「他」時，他們也不過是一時口快失言，他們所講的也不是他們心底的意思。因為除非你能夠掌握聖靈具有位格這個事實，否則你不能真正明白聖靈的職事。倘若聖靈的位格被否定了，我們根本沒法對聖靈的工作有一個牢固的觀念和清晰的瞭解。（若果你想找出這話的證據，且看自由派及激進派抗辯宗、猶太教、伊斯蘭教、獨神論和基督教科學的基本信仰。）我實在不願意看見堅守聖經信仰的基督徒當中，有誰在這一點上猶豫動搖。靈恩派對教會的一項重大貢獻，就是使人很難不以「他」來稱呼聖靈。然而，要叫信徒確信聖靈擁有位格，最穩當的方法莫如將新約聖經對聖靈工作所作的見證擺在信徒面前。現在就讓我們從這方面著手吧！
 
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈是神][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 聖靈與基督
 　　約翰福音是否有可靠的歷史根據這個問題，已掀起了整整一個世紀的學術辯論，故此在研究新約聖經主旨的時候，若還以約翰福音起始，就會顯得過時落伍了。一般慣常的做法，是透過馬太、馬可及路加福音，有時候也透過彼得和保羅的書信，去研究約翰的見證；就好像我們只能站在其他作者的肩膊上，才可清楚看見約翰一樣。可是，對於約翰的記載，既然我看不出有任何充分理由去懷疑他的真確性，也不見得內容含混不清，我提議以約翰福音作為闡釋聖靈新約職事的出發點，因為約翰福音記載了耶穌親口說的話，為我們提供了瞭解聖靈職事的重要線索。無論如何，若然我們想完全瞭解馬太、馬可、路加、彼得和保羅所告訴我們有關聖靈的真理，我們必須站在約翰的肩膊上去觀看。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈與基督][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 應許賜下聖靈
 　　約翰告訴我們，在耶穌被賣的那一夜，他向十一個門徒絮絮不休地說了一段很長的話，表示自己將要離開他們，進入榮耀中（約一三至一六章），而且談論到他們未來的門徒生命將會如何。他好幾次提到保惠師，即是他所說真理的靈（約一四 17，一五 26，一六 13）和聖靈（約一四 26）。他說在他離去以後（約一四 16、26），天父會因著他（聖子）的要求而差派保惠師來，因此，我們可以說聖靈是由聖子差派的一位天父的使者（約一五 26，一六 7）。耶穌說，他會「因我的名」受差遣（約一四 26），亦即是說他是耶穌的信差、發言人和代表；他將會永遠與耶穌的門徒同在（約一四 16）；藉著他的降臨，耶穌——他們榮耀的主——就會真實地住在他們中間（約一四 18—23）。在聖靈的新約職事中（這正是耶穌所講述的），聖靈會隱藏自己，而將人的注意力校正到耶穌身上，把人帶進信、望、愛、順服、敬拜和委身的生活中，以致與基督深深密契。讓我們說得清楚一點，這仍舊是量度所謂「屬靈」運動——諸如合一運動、靈恩運動、禮儀運動、小群運動、平信徒運動、普世宣教運動等——並所謂「屬靈」經歷的主要標準。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#應許賜下聖靈][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 聖靈與基督的同在
 　　凡願意遵行神話語的人，都表明他們是愛神的（約一四 21—23），聖靈會幫助他們真實地經歷基督的同在，並與基督和天父相交。「有了我的命令又遵守的，這人就是愛我的；愛我的必蒙我父愛他，我也要愛他，並且要向他顯現。」這是基督徒獲得獨特經歷的途徑，約翰已親自為這種經歷作見證，他寫道：「……我們乃是與父並他的兒子耶穌基督相交的。」（約壹一 3）這是基督給我們眾人的挑戰，叫我們尋求這種親身體驗的相交生活，而不單單滿足於次等的基督徒生活。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈與基督的同在][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 聖靈的教導
 　　耶穌在世上三年的事奉中，曾經不斷教導人，同樣，聖靈也負責教導的工作；聖靈教導的方式是使門徒回想並瞭解耶穌曾經說過的話。（約一四 26；另參一六 13，耶穌所說「一切的真理」，類似十四章二十六節的「一切的事」，意思並不是說「要知道所有任何事情」，而是指到「所有你需要知道有關我的事」，「將來的事」並非「將要發生在你身上的事」，而是「將要發生在我身上的事」——十字架、復活、作王、再來、復興萬事。）今天，林林總總的所謂基督教神學思想爭相吸引我們的注意力，我們大可用上述方法去試驗聖靈在這一切神學思想裏到底占了什麼地位。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈的教導][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 聖靈的見證
 　　最後，聖靈會為基督作見證，使眾人知道那像囚犯一樣受刑釘死的基督，實際上並非罪人；他復活後進入天父的榮耀中就證明他是正義無罪的；藉著十字架上的審判，他驅逐了世界的黑暗之主，並成為世界的審判者（參看約一二 31）；凡拒絕承認這些真理的都犯了不信的罪（約一五 27，一六 8 一 11）。那帶著見證的靈無形中成了世人的起訴者，讓世人醒悟到拒絕耶穌，或不以認真態度對他是何等嚴重的罪（約一六 8）。聖靈在一個又一個的心靈中工作，叫人知罪，承認：「我錯了；我有罪了；我需要神的赦免。」這是聖靈在福音工作中協助人信主的應許。他說服人及使人認罪的方式，是透過教會傳遞使徒的資訊，去說服人接受基督；而聖靈的見證，是藉著作見證的基督徒將真理展示在人們的心思意念中，然後聖靈就開啟眾人心靈的耳朵，使真理在每個人的良心裏運行（參約一五 27，一七 20）。
 
 　　故此，聖靈是要榮耀那榮耀的救主（約一六 14）。一方面，他將關於基督的真理闡釋清楚，另方面，他開啟人愚昧的心竅去接受真理。由始至終，主基督耶穌都是聖靈職事的焦點。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈的見證][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 聖靈照明基督
 　　那麼，聖靈在新約中獨特的職事是要像泛光燈一樣，把主耶穌基督照明。關於聖靈這方面的職事，耶穌在地上的時候，聖靈「還沒有賜下」（約七 39）；直至天父榮耀了基督（見約一七 l、5），聖靈才開始他的工作，使人醒覺到耶穌的榮耀。
@@ -403,10 +430,16 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　又或者我們可以這樣想：就好像聖靈站在我們背後，耶穌站在我們面前，聖靈在我們的肩膊上投射光芒到耶穌身上。聖靈的信息永不是：「看我，聽我，來就我，來認識我。」而是：「看他，看他的榮耀；聽他，留心他的話語；來就近神，並得著生命；認識他，並嘗嘗他所賜的喜樂和平安。」我們甚或可以說，聖靈是媒人，是屬天的婚姻介紹人，他的角色是帶領我們與基督在一起，並確保我們能夠維持這種關係。聖靈作為第二位保惠師，經常引領我們來到原本的保惠師面前。如上述所闡明的，這原本的保惠師常常藉著第二位保惠師的降臨就近我們（約一四 18）。聖靈協助我們辨出原本的保惠師，又在這位保惠師從他的寶座下來與我們相遇時，感動我們向他伸出雙手；就這樣，聖靈照著基督的話榮耀了基督。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈照明基督][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 聖靈與基督徒
 　　正如前面說過的，耶穌的教訓給我們提供了主要線索，藉以闡明新約聖經一切有關聖靈職事的教導。太多時候，我們只是依據我們的需要和缺乏來理解聖靈的職事，而不是按著我們剛剛學習的真理——即是說，聖靈的工作是榮耀基督，他主要而恒常的職責是向我們體現基督，幫助我們醒覺耶穌是誰，好讓我們完全信靠他——來瞭解。結果，我們以基督徒為中心，而不是以基督為中心去理解聖靈的工作；換句話說，是以人為中心而不是以神為中心去看聖靈的職事。
 
 　　無可置疑，其中一個導致這種以人為中心的觀點的原因，是雖然新約書信對聖靈在個人身上所擔任的職事有最詳盡的討論，卻甚少提及門徒與主耶穌之間的愛和相交（因為當時書信的讀者肯定已知道這方面的真理），然而在福音書中，雖對於關乎耶穌的一切有最詳細的描述和闡釋，但除了約翰福音十四章至十六章以外，就甚少論及聖靈。但是，我們必須謹記，福音書是為那些熟悉書信中教義的人寫的，同樣，新約書信也是為那些對福音書事蹟耳熟能詳的人寫的。因此，書信的讀者腦海中很自然會浮現有關信靠基督和愛基督的經文。誠然，我們讀新約書信時，也應考慮這一點，絕不可忘記聖靈在新約之下的主要工作仍舊是體現基督。我嘗試在以下的段落裏，指出牢記這個事實會如何影響我們慣常的思想。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈與基督徒][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 新生
 　　對於基督徒生命開始時的重大轉變，即耶穌所喻說的「新生」或「重生」（約三 3—8；另參彼前一 23；雅一 18），一種慣常又真實的說法，是「從靈生的」（6 節）。我前面已經暗示過，在我看來，第五節提及的「水」並非指任何可以補足聖靈內在工作的外在東西。他不是指約翰的施洗或基督徒的洗禮，或如一些人所假定的自然生產時的羊水，而是指到內在更新的潔淨，正如以西結書三十六章二十五至二十七節的意象一樣。（所以在第六節沒有提及水並不產生問題，因為水只不過說明聖靈更新工作的其中一方面而已。）在類似的基礎下，保羅稱這個過程為「重生」（regeneration）（多三 5）和「新造」（new creation）（林後五 17；加六 17），並把他解釋為與基督同死同復活的生命改變（羅六 3—11；西二 12 一 15）。保羅像耶穌一樣，確定基督徒藉著信心能逐漸達致完全。信心的意思是仰望基督，信靠他所流的寶血並寶血所印證赦罪的應許（參羅四16—25，一○8 一 13；西二 12；約三 15—21，五 24，六 47、53—58）。同時，保羅也告訴我們，聖靈吸引我們倚靠和追隨基督（林前一二 3），使我們與基督聯合，成為他教會的肢體，同屬一個身體（13 節）；因此我們藉著信心，可在他的大能之下活出超自然的生命。對相信聖經的人來說，這些都是正確的，都是老生常談。
@@ -429,6 +462,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　最後，我們可以矯正一般關於基督徒委身的含糊觀念。在我們的讀經生活裏，強調經常默想四福音書，甚於其他經文，因為研讀福音書可以幫助我們對主有清晰的觀念，並在思想裏掌握到作為他門徒的意義。其實，有關門徒實踐的教義，在書信裏寫得最清楚；但門徒實踐的性質，卻在福音書裏有最傳神的描繪。有些基督徒重視新約書信過於福音書，他們說從福音書的研習中畢業後，就可進入新約書信的研習，仿佛這就是屬靈成長的標誌；但事實上這種態度是十分惡劣的，他意味著我們著重神學觀念多於與主耶穌個人的相交。其實，我們應該把新約書信的神學思想視為一種裝備，好叫我們更瞭解福音書中基督與門徒的關係。讓我們不要忘記一般人慣常的說法，也是真確的說法：四福音書是世界上最奇妙的書。
 
 　　有一件事是清楚肯定的，若我們能完成上述所有矯正和修改，那將是極大收穫。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#新生][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 認識神及愛神
 　　某些有關基督徒生命的真理，是眾多以聖經為信仰根據的基督徒所共知的。舉例來說，每個信主的人都領受聖靈（徒二 38；加三 2），這是大家熟知的真理。所以，那賜下給我們的聖靈，是一個「印記」——表示信徒屬於神（林後一 22；弗一 13）。從此以後，聖靈居住在他或他裏面（羅八 ll）：亦即是說，他好像一個長期住客，關往及投入我們生命和心靈中的大小事情。他擔當了「仁慈和甘心樂意的住客」角色，成為一股改變的力量，使我們更新，與耶穌的德性相似，「……榮上加榮……」（林後三 18）。這裏沒有什麼是新鮮的，全都是一般標準的教導。
@@ -454,6 +490,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　要在這裏圓滿地處理這些主題，即使我有這個能力，也是絕不可能的。現在，我僅能做的，是記下我心中所確信的，就是那能啟導我們領悟內在生命的鑰匙，亦即是約翰福音十六章十四節所詳述的聖靈的工作：使耶穌基督，我們那位被釘、復活、統治萬物的救主，時刻成為我們的榮耀，是我們真實經歷得到的。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#認識神及愛神][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 恩膏_見證_憑據
 　　約翰駁斥諾斯底派對耶穌的不信時所指出的，正是聖靈這方面的職事。他宣告「從主所受的恩膏……在凡事上教訓你們」（「凡事」是指一切關於耶穌和他的榮耀的事），引導我們「住在他裏面」意思是我們不單只真心承認他，更作他門徒，與這位永活的主建立關係）。約翰稱聖靈為「見證」，文義直譯是「那見證者」（三位見證的首位；其實第二及第三位是「水和血」，即耶穌的受洗和死亡），是指聖靈的職事：幫助我們肯定使徒所傳揚的基督是真實和屬於我們的（約壹五 7、8）。奥古斯丁（Augustine）、伯爾納（Bernard）、路德、加爾文、歐文（Owen）、懷特菲（Whitefield）、司布真（Spurgeon）和其他許多人，包括無數聖詩作者，他們懷著驚人的確信、充滿信心的態度，洋溢著狂喜之情，不斷頌贊推崇主耶穌；我認為這些都是聖靈所結的果子。我相信所有讓聖靈在生命中完成他的職事的人，都會像他們那樣稱頌基督。若沒有神所賜這種對新約基督的確信，沒有按神的教導，以信心、愛、順服和敬拜的心恒常住在基督裏面，就活不出真正的基督徒生命來，也不能擁有真實的成聖生命——因為若缺乏了這一切，根本就沒有新生。
 
@@ -469,7 +508,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　是亞伯拉罕的神、以撒的神、雅各的神，
 　　不是哲學家和學者的神。
 　　確實無疑。確實無疑（確信）。
-　　感覺（感情）。喜樂。平安。6
+　　感覺（感情）。喜樂。平安。
 
 　　約翰·衛斯理也有同樣著名的經驗。一七三八年五月二十四日，他「非常不願意地走向柯達士己街（AldersgateStreet）一個社團去，那裏有人在誦讀路德為羅馬書寫的序言。大約八時四十五分，誦讀的內容描述到神藉著人在基督裏的信心改變人的心靈，就在那一刻，我感到心裏異常溫暖。我感覺我確是信靠基督，並相信惟獨基督能給我拯救；接著我獲得一個確據，他已經除去我的罪，救我脫離罪惡和死亡的律法。」這些「經驗」只不過要加強每個信徒自起初信主時已有的真實經驗。保羅用現在式去講述聖靈的見證（「聖靈與我們的心同證（testifies）我們是神的兒女」「羅八 16」），意味著聖靈持續不斷地運行，賜我們對神恒久的信心。雖然這份信心不是時時刻刻都能強烈地感受得到，雖然他時不時會受到疑惑和失望所動搖，但這信心始終屹立不倒，至終不能被摧毀，因為有聖靈親自保守！
 
@@ -483,12 +522,18 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　這愛不是天賦或自然發展，而是聖靈的超自然果子（參加五 22）：聖靈幫助人看見和認識神的愛，人心裏便生出這種愛來。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#恩膏_見證_憑據][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 內心之旅
 　　我希望可以徹底討論這方面的事情（在以上的篇幅裏我當然未能做到），但我必須停下來，只能在這裏提供最後的評論。我們生命的旅程是雙線的旅程。一方面，這旅程是向外的，我們面對外來的衝擊，不斷有新發現，並建立各種關係；另一方面，這旅程是向內的，我們達致自我認識，尋求自我的表現、抱負的實現、自由和心靈的滿足。對基督徒而言，向外的旅程，是為創造主的緣故，學習如何積極及有意義地與世界和別人——亦即是神所創造的萬物——相處；而內心的旅程，是與神及聖子耶穌建立關係，並在這種關係上進深。
 
 　　今天，在奔忙喧囂的西方社會，人的生活變得極度不平衡，教育、商業利益、傳播媒介、知識的爆炸，和我們社會所強調的積極進取精神，這些合起來都驅使人往向外的旅程進發，而且匆匆賓士，因而分散了人對內心旅程的關住。西方基督教的情況也一樣。今天我們大部分人都不知不覺地變成了不平衡的活躍分子，很不幸地追隨了世界的樣式。我們像法利賽人一樣，非常活躍（參太二三 15），像他們變得嚴厲、律法主義、墨守成規，過著忙碌、自滿的生活，關心活動程式尤甚於關心人。我們指責商人為他們的公司出賣靈魂，把他們的人格犧牲在機構的祭壇上；其實，我們不過是五十步笑百步。有關聖靈的真理，今天基督徒最急需學習的，也許再沒有比學習如何在內裏的生命與神相交更為迫切了。我稱這生命為內心旅程。（你亦可以稱之為向上的旅程——這個形容詞同樣適切。）
 
 　　現在你明白我為什麼不可以繼續這個題目的討論了。不過，目前還有其他方面的事情是我必須指出的。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#內心之旅][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 屬靈恩賜
 　　在第一章裏，我討論過一些關於屬靈恩賜的問題，在這裏我們需要更詳盡地探討這問題。
@@ -530,6 +575,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　使徒行傳所載是不是聖靈第一次在這世上顯現呢？很明顯，答案是否定的。在舊約時代，我們已經見過聖靈的一些活動，及至耶穌在世上的生平和事奉，也有很多有關聖靈工作的記載。耶穌向門徒宣佈那位保惠師（或訓慰師）要來時，他說：「……真理的聖靈，乃世人不能接受的；」接著他補充道：「你們卻認識他，因他常與你們同在……」（約一四 17）。「你們……認識」（you know）和「他常與你們同在」（hedwells）兩句採用現在式，是符合語言習慣的，意思是所述的情況在不久將來即會發生（約翰在其他地方亦有採用現在式來表達即將發生的事）；但同時，耶穌的意思也可以是（事實這可能性更大）「你們已經認識聖靈（雖然你可能未必知道你已經認識他），因為他在此時此地已與你們同在，正如他與我同在一樣。」試看句中時式和介詞的強烈對比（「他常與你們同在「dwells with you」，也要在你們裏面「wi11 be in you」。」，除上述推想外，再難找到更滿意的解釋了；而且，在約翰的記載裏，他經常強調的，是耶穌在世的一生中有聖靈常在他裏面，並與他同在。耶穌是由聖靈感孕的（太一18、20；路一 35）。耶穌受洗時，聖靈彷佛鴿子降在他身上，表明他是神的受膏者，被聖靈充滿（太三 16；可一 10；路三 21、22，另參四 l、14；徒一○38；約一 32—34，另參六 27，這裏很有可能是指到洗禮中受膏的印記，及三 34「……神賜聖靈給他，是沒有限量的。」）。耶穌「被聖靈引到曠野中」受試探，經受嚴峻的考驗（參路四 1；太四1；可一 12）；他靠聖靈的能力傳道（路四 18），靠著聖靈趕鬼（太一二 28）；他「……被聖靈感動就歡樂……」（路一○21）；「基督藉著永遠的靈……」，將自己獻與神，在十字架上作無瑕無疵的祭（來九 14）；「……按著靈性說，他復活了」（彼前三18）；他在升天之前，「藉著聖靈」吩咐門徒往天下去（徒一 2）。所以，道成肉身的神子是「屬靈人」的理想典型——關於這一點我們是無可置疑的！因此，這裏表達的是五旬節前聖靈職事的其中一方面。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#五旬節的意義][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 惹起爭論的經文_約翰福音二十章二十二節
 　　約翰的一個中心思想是被聖靈充滿者也同是賜予聖靈者，即是「用聖靈施洗」又「差」聖靈到門徒那裏去的那一位（約一 32，一五 26，一六 7）。約翰記載了耶穌在復活當天首次在耶路撒冷向門徒顯現的時候，如何把使命託付門徒——「……父怎樣差遣了我，我也照樣差遣你們」——，然後立即「……向他們吹一口氣，說：『你們受聖靈』。」（約二○21、22）耶穌清脆俐落地由肺裏向他們吹一口氣，有人極力認為這就是賜下聖靈給門徒，叫他們開始新生的時刻；但這種論調不可能成立，原因有三：
 
@@ -543,6 +591,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　因此，對於耶穌向門徒吹氣一事，最合理和最自然的解釋（一如大多數解經家的瞭解），就是以此為一種用行動表達的預言，而他的話（「你們受聖靈」）就是一個應許，表示門徒即將體驗聖靈的新職事，屆時聖靈會裝備他們，使他們能應付新的使命。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#惹起爭論的經文_約翰福音二十章二十二節][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 五旬節的實質
 　　那麼，我們該怎樣瞭解四十日後在五旬節早晨發生的事件？我們不應該看狂卷的風聲、降在各人頭上舌頭形狀的火焰、語言的恩賜等為這劃時代事件的實質（這些都是次要的東西，我們可稱之為點綴的飾物）。反之，整件事的實質就是聖靈的新約職事在當天早上九時就開始了，他讓每個門徒清楚瞭解耶穌在神整個計畫裏的位置，使他們強烈地意識到他們的身分和權柄，是在這世上代表耶穌，又賦予他們無限的勇氣，去宣告坐在寶座上的耶穌的權能——我們可從彼得的講章裏發現這些新生的特質。想到他從前是怎麼樣的人，這些改變不禁叫人驚訝。耶穌應許在聖靈降臨以後，門徒必得若能力去為他作見證（徒一 5、8）；路加在他的福音書中亦屢屢描述一個失敗的人物——彼得，顯然想讓我們看見耶穌的應許怎樣應驗在彼得身上，以他作為一個範例。路加也想我們瞭解這在新約裏「所賜的聖靈」——換句話說，是體驗聖靈的新職事，就是聖靈住在主的子民裏面，藉著他們榮耀耶穌——是應許賜給所有悔改、受洗的人的；從他們成為門徒的時候開始，便可得著聖靈（徒二 38，另參一六 31—33）。
 
@@ -550,12 +601,18 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　一間神學院選院長的規例是這樣的，院長須從教員當中選出，而就任院長以後，要繼續教授他從前的課程。這樣，教員當上院長後，他的責任增加了，但不會失去舊有的職責。同樣，自五旬節開始，聖靈的職事擴大了，但他從前的職事卻絲毫未減。正如我們看到，在五旬節以前，聖靈扶養受造的萬物和眾生，使信徒心靈更新，賜予屬靈的悟性，賜下作領導或其他方面事奉的恩賜；今天聖靈仍舊執行這些職事。五旬節以後，聖靈職事的不同處，就是他作的不再是關乎那將要來臨的基督，這是聖靈對舊約聖徒所作的（這方面的提示見於約八 56—59；林前一○4；來—一 26；彼前一 10）；他的職事也不再系於在地上存活的基督，正如他感動西面和亞拿認出基督時所作的（路二 25—38），並且耶穌在世上公開事奉的三年中，聖靈都已經如此作；如今聖靈的職事是系於那已經來臨，已經受死、復活，在榮耀裏掌權的基督。對於那在神的新紀元中的新境界（就與聖靈有關的範圍來說），我們應該從上述方向去理解，正如我們應該以與基督的相交關係來理解自五旬節以來基督徒享有的新生命一樣。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#五旬節的實質][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 聖靈的洗和聖靈充滿
 　　我們經常聽聞一種見解，就是根據使徒行傳二章，認為神要每個基督徒的生命都分成兩個階段或兩個層次，悔改信主以後會有第二次經歷（按徒一 5，稱為聖靈的洗，按徒二 4，稱為被聖靈充滿），這經歷將一個人的屬靈生命提升到更高境界。對於這種見解，我們應該怎樣回應呢？我們應該如此說，雖然個別基督徒需要聖靈「第二次接觸」（還有第三次、第四次和許多次），並且一次又一次地得著這種經歷，但若以為這是神為所有基督徒安排的計畫，那就錯了。神定意所有基督徒從悔改信主那一刻開始，就享有五旬節所賜下的內在祝福（不一定是外在的修飾，而是心靈與基督的密契，並從這種關係湧流出來的一切）。
 
 　　為什麼第一代門徒的屬靈生命可分成兩個階段或兩個層次？唯一的理由是他們在五旬節之前信主，但對於你和我——我們差不多在五旬節後二千年才成為基督徒，所啟示給我們的計畫，是我們一開始就可以完全享受到聖靈的新約職事。在新約裏面，這事已經十分清楚，保羅指出在悔改信主之時，聖靈的洗就發生在哥林多的信徒身上——同樣道理，這事也發生在五旬節之後所有信主的人身上（林前一二 13）。保羅以所有基督徒自悔改信主以後都應該一直實行的生活方式，來形容被聖靈充滿的表現（參弗五 18—21；見希臘原文）。我們若缺乏這種表現，並非因為神不定意如此，只不過（姑勿論我們是否察覺到）是我們消滅了聖靈的感動（參提前五 19）。
 
 　　可以肯定說，基督徒是透過聖靈全面的新約職事而靈命逐漸成長（參弗四 15；提前三 12；提後一 3；彼後三 18），獲得新的屬靈經驗，並加深和豐富了舊的屬靈經驗。但我不打算在這裏詳述屬靈成長這回事。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈的洗和聖靈充滿][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 聖靈與我們
 　　若然這章所述都是正確的話，今天我們提出以下有關聖靈的兩個問題便是錯了。
@@ -569,6 +626,9 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　這些都不對，我們應向自己及彼此對問的問題應該是：聖靈有沒有得著你？他是否完全得著你，還是只得著部分的你？你有沒有使他擔憂（參弗四 30）？你是否接受他的引導（參羅八 12—14；加五 18—24）？你是否倚靠他催迫你，幫助你向基督作出回應？你有沒有認真處理這個事實，「……你們的身子就是聖靈的殿嗎？這聖靈是從神而來，住在你們裏頭的……」（林前六 19）你是否尊敬他在你心中的工作，並與他合作，抑或你老是不假思索、粗心大意、毫無自律、放縱自己，以致阻擋聖靈的工作？這裏的問題同樣必須以基督為中心來理解，他們實際上是以不同方式去問同一個問題：你的救主是不是你生命的主？當我們將問題聯繫到聖靈來發問時，問題就更有力、更具體，是其他提問方式所不能有的，因為聖靈住在我們裏面，改變我們，在我們的心靈和思想上不斷工作，領我們接近基督，保守我們與他保持親密的關係。聖靈本身與我們的關係非常密切，他明瞭我們隨時沉溺其中的汙穢思想和行為。用銀幕上影像的投射來作比喻，這就是所謂校正焦點。
 
 　　在以下兩章，我們將以基督徒的聖潔作為我們探討的主題。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈與我們][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 * 6_聖靈的路徑_解釋聖靈生活
 
