--- a/N55_Timothy_2__note.org
+++ b/N55_Timothy_2__note.org
@@ -173,6 +173,26 @@
 
 ** 現在讓我們來看看所讀這段經文的內容：
 *** 第一至七節：
+
+面對亞細亞基督徒的背棄，以及阿尼色弗的忠心耿耿，保羅更加鼓勵提摩太必須在德行上及屬靈的能力上剛強起來。第2節保羅又回到關懷信仰傳承、福音信息內容的純正性。
+在此保羅表達一個比較急迫的主題，期勉他能勝任基督教牧師的工作，並且憑著信心面對迫害的日子，並鼓勵提摩太與他一同分擔苦難。保羅並不是禁慾的苦行者，但他真心期盼一個基督教牧師應該隨時準備忍受困難。
+
+保羅以三個例子來說明他的想法。(1)一個好的士兵不能被營外的私慾纏擾，基督的士兵更是不能被今世的俗務所纏擾。(2)運動員的訓練與紀律。想要勝任自己所有責任和工作的基督教牧師，就必須學著去約束自己。(3)了解勞力是豐收的必要因素，就像農夫辛勤工作一樣。這些都反應出一個牧師在心理上及精神上的訓練。有時牧師必須預備心面對不受歡迎的情形，甚至也必須面對因對上主的忠心而帶來的迫害。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 我兒啊，你要藉著基督耶穌所賜的恩典剛強起來。你在許多證人面前從我領受了的教導，你也應該交付給你所信任而能夠教導別人的人。
 
 作為基督耶穌的忠勇戰士，你要分擔苦難。一個入伍的兵士要爭取長官的嘉許就不能讓營外的事務纏擾他。一個賽跑的人在競賽的時候不遵守規則就不能得獎。辛勤耕作的農夫應該首先享受所收成的穀物。你要思想我所說的話，因為主必定使你能領悟一切的事。
@@ -194,7 +214,24 @@
 使徒保羅從軍人談到競賽者，最後以農夫的耕種作為比喻，來形容作為一個傳道者應該有的工作態度，他在最後還告訴提摩太，必須好好認真思想他所說的話。這樣的交代通常也是父母對子女所說的，在這一章一開始，使徒保羅就是以「我兒啊」這樣的稱呼來開始這封後書的內容，可以想像得到，他就像提摩太信仰上的父親，在期待自己的子女真的會用心、認真在傳福音的事工上。
 
 *** 第八至十三節：
-你要記得耶穌基督，他是大衛的後代，上帝使他從死裏復活；這就是我所傳的福音。我因為傳這福音而遭受苦難，甚至被捆綁，像囚犯一樣。但是，上帝的話是不受捆綁的。因此，我為了上帝所揀選的子民忍受這一切，好使他們也能得到那從基督耶穌來的拯救和永恆的榮耀。以下這話是可靠的：
+
+羅馬書一章3-4節，是整篇羅馬書信息的濃縮，可幫助我們來了解提摩太後書11章9節。保羅所宣講的福音就是爲了見證耶穌爲神人(God-man)。他寫道他就像一個囚犯遭受捆綁，但他知道上帝的話不會被捆綁。一個信仰也不會因爲它的領袖被下在監牢中便會毀滅。而且現在也有人繼續在傳揚，且透過這封從羅馬監獄所寄出的信，保羅自己仍繼續爲耶穌基督做見證。
+
+保羅接受了這個困境，因將它視爲自己被耶穌基督差派之後，傳道經歷的一部分。所以，如果保羅一直持守他的信心直到生命的末了，那些跟隨他的人，就能因他的模範而得到支持與認可。保羅對於自己忍受苦難的了解及其重要意義，爲後來的人預備了一個方向、一首讚美詩來激勵自己、來擺上信心。
+
+如果我們已經跟祂同死，我們就會跟祂同活。
+如果我們忍耐到底，我們就會跟祂一同掌權。
+如果我們不承認祂，祂也不會承認我們。
+如果我們失信，祂依然信實可靠，因為祂不違背自己。
+
+第一句表達了那些爲基督而死，也將與祂同活的人的信心。第二句則是對忍耐到底這項功課的呼召。事實上，有時爲基督而死，比活著卻不斷地面對迫害還來得容易呢！第三句的動詞用的卻是未來式，似乎暗示著基督不太可能被祂的信徒所棄絕。第三句也是一個嚴正的警告，但它並不會比耶穌在馬太福音十章13節的警告來得更嚴厲。第四句卻是一個充滿希望的信息，也可以是更嚴厲的警惕。它說明了基督必忠實遵守賞罰的標準及要求。然而並不是我們每一顆搖擺不定的信心，都會被我們的上主以嚴厲的審判加以否認和拒絕。「但是，主是信實的；也會使你們堅強，使你們不受那邪惡者的侵害。」(帖撒羅尼迦後書三章3節)假如我們對基督充滿信心的話，我們就能坦然無懼地面對那試驗的日子。
+
+
+
+
+
+
+你要記得耶穌基督，他是大衛的後代，上帝使他從死裏復活；這就是我所傳的福音。我因為傳這福音而遭受苦難，甚至被捆綁，像囚犯一樣。但是，上帝的話是不受捆綁的。因此，我為了上帝所揀選的子民忍受這一切，好使他們也能得到那從基督耶穌來的拯救和永恆的榮耀。以下這話是可靠的：
 如果我們已經跟他同死，
 我們也會跟他同活。
 如果我們忍耐到底，
@@ -259,39 +296,23 @@
 第廿一節說到在教會服事的工作中，不是在分「特別」或「普通」，而是在於潔淨的心為主所用。使徒保羅這種觀念取自以色列人傳承下來的一個重要觀念：上帝是聖潔的，所以上帝的子民也必須是聖潔的（參考利未記十九：—）。以色列人用甚麼方式來表明「聖潔」這個意義呢？就是用獻祭。而使徒保羅則強調必須把自己當作像聖潔的祭品一般獻給上帝。他說：「所以，弟兄姊妹們，既然上帝這樣憐恤我們，我勸你們把自己當作活活的祭物獻給上帝，專心事奉他，蒙他喜悅。這就是你們應該獻上的真實敬拜。」（羅馬書十二：）這觀念在使徒保羅的書信中一直持續著，因此，他認為基督徒要獻給上帝最好的禮物，就是「更新」的生命（參考羅馬書十二：，哥林多後書五：—，以弗所書四：—）。
 
 ** 現在讓我們來想想看這段經文所帶來的信息：
-*** 一、作個無愧於福音事工的僕人，乃是今天的教會和傳道者應該時刻注意的一件要事。
+*** 一、作個無愧於福音事工的僕人。
+要成為一個無愧的工人，其最基本的要件，就是從「正確地講解真理的信息」開始。
 
-使徒保羅提醒提摩太，要他在上帝面前作個無愧於福音事工的僕人。他同時告訴提摩太要成為一個無愧的工人，其最基本的要件，就是從「正確地講解真理的信息」開始。看，這是多麼重要的提醒啊！
+以弗所教會已經有人在傳不正確的信仰知識，說耶穌基督復活已是過去的事了。換句話說，有人在傳講沒有所謂復活這樣的信息，若是有，也只是靈魂復活，身體並不會復活。聖經告訴我們的，是生命的復活。上帝既然以祂的形像創造人類，並且賜給人類有生命之氣，這就是無法消失的存在。因此，在基督教信仰中，我們說復活乃是整體的生命，並沒有分開靈魂與肉體。
 
-想想看，使徒保羅為甚麼要強調「正確地講解聖經」呢？原因就是在以弗所教會已經有人在傳那些不正確的信仰知識，說耶穌基督復活已是過去的事了。換句話說，有人在傳講沒有所謂復活這樣的信息，若是有，也只是靈魂復活，身體並不會復活。但這並不是聖經給我們的信息，聖經告訴我們的，是生命的復活。上帝既然以祂的形像創造人類，並且賜給人類有生命之氣，這就是無法消失的存在。因此，在基督教信仰中，我們說復活乃是整體的生命，並沒有分開靈魂與肉體。
+對聖經有正確的了解，就不會受到誘惑，否則很容易因為不正確的講解聖經方式，使信仰偏離了聖經的基礎。
 
-對聖經有正確的了解，就不會受到誘惑，這一點是非常重要的認識。否則很容易因為不正確的講解聖經方式，使信仰偏離了聖經的基礎。我們應該有基本的認識：基督教會就是建造在聖經的基礎上。因此，在談基督教信仰時，就必須以聖經為本。如果沒有聖經的依據，所講的，也只是人的想法罷了。
+教會就是福音的僕人，就是要傳福音，見證福音的。因此，一間教會的信仰內涵好與否，主要就是看該教會是否有在帶領信徒研讀聖經，帶領人來認識聖經上帝的話語。
 
-這也就是為甚麼我來到咱教會後，一再鼓勵大家一起讀聖經，並且要按照進度來讀，也發給大家一份三年份的讀經表。來這裏已經有六年時間，我們將在明年六月完成新舊約聖經讀完兩遍。另一方面，我也帶大家研讀聖經、開查經班，也已經讀完了創世記、約伯記、馬可福音、路加福音、羅馬書等。現在帶大家查考啟示錄這本經書。在查經班時，我經常就是在提醒大家：在咱台灣經常有人在傳講不正確的信息，且有的人濫用聖經到了胡亂吹噓的現象。我一再提醒大家注意這些現象的原因，其實只有一個目的，就是希望大家正確地明白聖經，這樣才不至於被人利用，或被欺騙了而還不知道。
+*** 二、從我們自己潔淨心靈開始做起，各種不同的才能，才能讓我們成為福音的器皿。
+使徒保羅提醒提摩太在以弗所教會，要知道在教會中的信徒，都是來自各種不同階層的人，大家都是身懷上帝所賞賜的不同恩典。這些恩典並不是用來炫耀自己的才華，或是只用來利益自己的需要。
 
-我最近接獲一份傳單，說是有一個人很偉大，且是偉大到自從耶穌基督當年在耶利哥曠野禁食四十晝夜之後，現在只有「某某恩」的這個牧師才有這樣寶貴經歷，說他也有經歷了禁食四十天的能力。這個人要在台灣各地開一所「超神學最高學府」。類似這樣的廣告，看起來很震撼人心，也很吸引人的耳目，如果沒有注意，還以為這個人多麼偉大，好像比舊約聖經的先知還要偉大的樣子。但想想看，一個人能禁食這麼久有甚麼意義？禁食的目的是為了甚麼？再者，如果我們有研讀聖經，就會知道耶穌基督曾告訴過我們的話。他說：
+使徒保羅提到不同的材質；有的比較「特別」，有的比較「普通」。通常會讓人使用次數最多的，應該是最普通的器皿，也因為這樣，這樣的器皿通常都不是最昂貴的材質做的。只有很少用到的東西，因為比較「特別」，所以，一般來說都是材質比較好的。但越「普通」，與人的關係就越密切；相對的，越「特別」，和人之間互動也就越少。
 
-「你們禁食的時候，不可像偽善的人；他們裝出一副苦相，故意蓬頭垢面，好讓別人看出他們正在禁食。我告訴你們，他們這樣做已經得了所能得到的報償。你禁食的時候，要梳頭洗臉，不要讓別人看出你是在禁食，只讓那位在隱密中的天父知道；看得見你在隱密中做事的天父一定會獎賞你。」（馬太福音六：—）
+但不論是什麼材質，共同的目的就是為了要傳揚福音。如果我們沒有這樣的認識，要在同一間教會中共同推動福音事工，那是很困難的。
 
-這個「某某恩」的牧師既然讓人知道他禁食四十天，這樣的禁食就已經不需要上帝注意他的禁食了。因為禁食並不是要公開讓人知道的，且為甚麼要禁食？這一點也應該回到聖經中來，明白聖經中提供禁食的主要目的和用意。除非有相當特別，且是在聖靈的引導之下才進行禁食，而不是想到要禁食，就去禁食。如果我們有注意讀聖經，就會知道類似這種傳單所說的，根本就不足以讓我們去學習。
-
-教會就是福音的僕人，因為教會的存在之目的，就是要傳福音，見證福音的。因此，一間教會的信仰內涵好與否，主要就是看該教會是否有在帶領信徒研讀聖經，帶領人來認識聖經上帝的話語。
-
-一個傳道者，他獻身的使命就是要傳揚聖經的話語。因此，最基本要做的事，就是帶領信徒正確地認識聖經的信息。而傳道者若要正確地認識聖經信息，就必須對聖經下功夫研究，這一點是非常重要的事。因為信徒對聖經的認識，幾乎都是透過傳道者的協助得來的，傳道者若不用功，就很難幫助信徒在聖經的認識上進步。使徒保羅提醒提摩太牧養的工作必須從聖經著手，他的話也是在對今天之傳道者說的。
-
-*** 二、我們都懷有各種不同的才能，但這些都是為了要讓我們成為福音的器皿，因此，必須從我們自己潔淨心靈開始做起。
-
-每個人身上都有上帝所賞賜的不同恩典，這是我們經常聽到的一句話，也是使徒保羅告訴提摩太的話。他提醒提摩太在以弗所教會，要知道在教會中的信徒，都是來自各種不同階層的人，大家都是身懷上帝所賞賜的不同恩典。但我們必須注意一件事：這些恩典並不是用來炫耀自己的才華，或是只用來利益自己的需要，這不是賞賜給我們這些恩典的主要用意。使徒保羅告訴提摩太，說每個人恩典不一樣，就像許多器皿，雖然每個器皿都有它特殊的用途。
-
-使徒保羅提到不同的材質；有的比較「特別」，有的比較「普通」。請注意，他是用「特別」和「普通」這樣對比的詞，這就很有趣了。通常會讓人使用次數最多的，應該是最普通的器皿，也因為這樣，這樣的器皿通常都不是最昂貴的材質做的。只有很少用到的東西，因為比較「特別」，所以，一般來說都是材質比較好的。但越「普通」，與人的關係就越密切；相對的，越「特別」，和人之間互動也就越少。
-
-但不論是什麼材質，是「特別」或是「普通」，我們都因為耶穌基督的緣故才會聚集在同一間教會中，這是有一個共同的目的，就是為了要傳揚福音的緣故，這樣的認識是非常重要的。如果我們沒有這樣的認識，要在同一間教會中共同推動福音事工，那是很困難的。
-
-我感到比較可惜的是，在咱台灣長老教會裏，有許多很好的人才，都擁有上帝所賞賜的美好恩典，但擁有這樣美好恩典的人，卻經常在教會事工中採取觀望的態度多，甚至有些人不但沒有參與服事，且還要讓其他的人來服事他。但我看到許多新興起的教會，教勢成長得很快，這樣的教會都有一個共同點：參與服事的信徒很多。他們都很願意放下自己原本被這個社會看為尊貴的身段，來參與教會事工，也因為這樣，反而帶領更多的人看到了受感動而加入了教會服事福音事工的行列，讓人感覺該教會很有活力，也因為這樣，加入的人越來越多，教會的成長相當快，這真的是我們應該要學習和反省的地方。
-
-我曾一再告訴過大家，且告訴過長老們很多次，我只會帶領大家研讀聖經，其它有關怎樣組織信徒的事，這方面我確實甚麼都不會，你們要出來幫助我。我不是一個全能的牧師，更不是一個很有才華的傳道者，除了帶大家查經之外，我真的其它方面都很弱，需要大家一起來協助推動。我期盼大家不是告訴我說：啊，牧師，我們教會可以做甚麼，不是停留在這裏。因為停留在這裏，就是要我去做一樣。你可以告訴我說，我們教會可以改善那些、做哪些。然後我們一起來討論怎樣將這些美好的意見或願景給改善過來，或鋪陳出來，這樣才對。否則，你告訴我說，可以做甚麼。然後就等著我去做，結果必定是甚麼都沒有發生，因為我不會啊！除非你來參與才行。
-
-教會若要成為一間真正在傳福音的教會，就必須所有的會友都動起來，大家把得自上帝的恩典提供出來。更重要的，就是懷著心甘情願的心一起來參與這些服事的工作，這一點是非常重要的。使徒保羅說，這樣的人所奉獻的，才會被上帝所器重。
+教會若要成為一間真正在傳福音的教會，就必須所有的會友都動起來，懷著心甘情願的心一起來參與這些服事的工作。使徒保羅說，這樣的人所奉獻的，才會被上帝所器重。
 
 （講於二○○三年十二月廿八日）
 
