--- a/The_Laymans_Bible_Commentary_23__orig.org
+++ b/The_Laymans_Bible_Commentary_23__orig.org
@@ -1,32 +1,32 @@
-* 提摩太前後書
-** p156
+*提摩太前後書
+**p156
 給我們的靈不使我們膽怯；相反地，他的靈會使我們充滿力量，愛心和自制。」當保羅和提摩太領受聖職的時候，他們便接受了從天而來屬靈的供養，使他們的靈魂得著力量、愛和自制。
-** 提摩太爲耶穌基督所做的見證(一章8-10節)
+**提摩太爲耶穌基督所做的見證(一章8-10節)
 因爲提摩太已經接受了上帝所賜的力量，他便放膽宣揚福音。他不以爲耶穌基督做見證爲恥，也不會因保羅是個囚犯而以他爲恥。這是第一次我們得知保羅的處境。他正在爲他的信仰受苦，而提摩太也必隨時預備與他一起爲福音分擔苦。
 
 此處所提及的福音及上帝的能力是基督福音一個簡要的概覽。上帝已經「拯救我們，呼召我們作他的子民，並不是因爲我們有什麼好行爲，而是出於他的旨意和恩典。他在萬世以前就藉著基督耶穌把這恩典賜給了我們。」保羅強烈地主張救恩最根本的基礎在於上帝的心意，祂要透過基督的救贖工作，爲祂自己拯救祂的百姓。因爲保羅在教牧書信強調好行爲的重要性，第9節的經文就更值得留意。上述保羅的話，與提多書三章5節相同，都指出單靠好行爲來做我們渴望救恩的基礎是行不通的。正如保羅所說，救贖是單單藉著信心、單單靠著恩典，單單榮耀上帝。這救贖最根本的奧祕是上帝的心意，一種自由卻又負責任的心意。
 
 福音的根本在於上帝決定透過耶穌基督拯救世人。直到救主耶穌基督的出現，上帝永恆的救贖旨意，才完全地向我們顯明出來。耶穌的工作在下列經文中有如此的簡要說明：「基督已經毀滅了死亡的權勢，更藉著福音把不朽的生命彰顯出來。」當然耶穌並沒有廢除肉體的死亡。在耶穌來到世上之前和之後，所有人的生命都只有走向死亡一途。但耶穌戰勝了死亡。祂死了並且在第三天復活。祂爲上帝所應許的死後復活的生命做見證。耶穌告訴門徒，說祂離去是要爲他們預備地方，祂必再回來接他們到祂那裡去，他們必定與祂同在一個地方(約翰福音十四章3節)。耶穌消除了門徒對死亡的恐懼，並且提供一個確定的盼望，就是他們都將進入天國的家。如此，祂藉著福音，將「不朽的生命」顯明出來。藉著耶穌的工作，在上帝神聖的啓示裡，顯明了生命不朽的盼望。所以，在福音的信息中指出，人被呼召，一同來分享上帝永恆的救恩。
 
-** p160
+**p160
 守聖靈所託付給他的真理的想法相符。提摩太之所以能夠傳揚福音的真理給當時的人們，是因爲聖靈內住所賜予他能力的緣故。
-** 稱讚阿尼色弗(一章15-18節)
+**稱讚阿尼色弗(一章15-18節)
 在這封勉勵提摩太的書信中，插入了兩段保羅個人的回想。第一段是一個很不愉快的回憶，第二段則是他對另一個陌生人深深地致敬。提摩太此時已經聽說，在亞細亞已經有一些基督徒背棄了保羅。這件事可能起因於那些當時在保羅接受審判時支持他的人，最後卻都失敗了。這封信在此提及當時羅馬緊張的情勢之一，對當時的人們而言，認同保羅及他所做的工作都是一件危險的事。保羅提到兩個背棄他的人的名字，保羅在以弗所認識他們，所以特別提起他們的名字：腓吉路和黑摩其尼。
 
 面對許多人的失敗與叛離，阿尼色弗所表現的忠誠顯得令人激賞。他和他的家人都住在以弗所。提摩太也熟知他在教會中服事的擺上。不知什麼原因，阿尼色弗也來到了羅馬，在那裡他遍尋所有監獄中的囚犯，直到他找到了保羅。在當時這是相當不容易，因爲保羅可能被嚴密地看管著。但阿尼色弗找到了他，並且多次前往探望。阿尼色弗並不畏於認可這位已被判刑、且被法律禁止之宗教的領袖所帶來的危機。他的探訪對保羅的幫助非常大，他爲這位孤寂的階下囚提振精神，同時也爲這位偉大使徒的心靈帶來力量。保羅祈求主能夠憐憫阿尼色弗一家人，也祈求主在審判的那日憐憫他這個朋友。在這封信的最後，保羅還向阿尼色弗一家人問安(四章19節)。有些聖經註釋者認爲，保羅寫這封信時，他的這些話暗示著阿尼色弗已然過世。所以，保羅才會爲了一個已經過世的人祈求上帝。另外還有一個更有可能的假設就是，阿尼色弗不在以弗所的家中而遠離在外。
 
 
 
-* 信實的基督徒牧者_提後二章
-** 一個有紀律的福音牧師(11章1-7節)
+*信實的基督徒牧者_提後二章
+**一個有紀律的福音牧師(11章1-7節)
 面對亞細亞基督徒的背棄，以及阿尼色弗的忠心耿耿，保羅更加鼓勵提摩太必須在德行上及屬靈的能力上剛強起來。第2節保羅又回到他對信仰傳承純正性的關懷。在此保羅所指的，當然是福音信息的內容。提摩太已經從保羅及其他見證人領受了這信息，現在輪到提摩太去傳遞他所領受的基督信仰。當然，這必定是「相同的」信仰，絕不是一個更改過的版本。他要把這信仰傳遞給那些在信心上完全，且有能力能夠教導別人的人。保羅如此寫道，因他完全信賴提摩太，及那些被提摩太所教導的人，這些人要傳遞信仰給下一代，使他們對基督信仰有一個更全備的認識。此外，保羅所寫那些偉大的書信，以及在福音書中所保留，初代教會爲主所做的見證，當時都已經被蒐集和記錄下來。因此，那時才會有一本現成的文字資料，成爲基督徒在傳道及教導時的標準規範和材料。
 
 在此保羅表達一個比較急迫的主題，就是他對屬靈的兒子提摩太的關心，期勉他能勝任基督教牧師的工作，並且憑著信心面對迫害的日子。因著這一份關心保羅鼓勵提摩太與他一同分擔苦難，如同一個「基督耶穌忠勇的戰士」。保羅並不是禁慾的苦行者，也不是要求自我折磨、懲罰等精神上的苦行者。但他真心期盼一個基督教牧師應該如同一個基督耶穌訓練有素的戰士，隨時準備忍受困難保羅以三個例子來說明他的想法。首先他舉士兵的例子。一個好的士兵不能被營外的私慾纏擾，他必須完全服從那召他入伍的人命令。一個基督的士兵更是不能被今世的俗務所纏擾，如此他便無法完全順服耶穌做他的主。第二個例證提到了一個運動員的訓練與紀律。沒有一個人可以不經過紀律和訓練而獲得運動競賽的冠軍。一個想要勝任自己所有責任和工作的基督教牧師，就必須學著去約束自己第三個例子是，一個了解勞力是豐收的必要因素，而辛勤工作的農夫。因此，一個牧師的紀律同樣地表達在他宣揚福音時，隨時準備忍受肉體勞苦的態度。這也反應出一個牧師在心理上及精神上的訓練，而且這是牧師生活中，最重要的一部分。有時牧師必須預備心面對不受歡迎的情形，甚至也必須面對因對上主的忠心而帶來的迫害。
 
-** 至死信實(二章8-13節)
+**至死信實(二章8-13節)
 保羅在羅馬書開始的幾節經文中(羅馬書一章354節)，是他整篇信息的濃縮，這也可幫助我們來了解提摩太後書11章9節。經歷了死而復活，耶穌宣稱祂帶著能力，是上帝的兒子。從大衛以來，耶穌的祖先都有肉體，然而耶穌全然的神性與人性卻是一個新的象徵。保羅所宣講的福音就是爲了見證耶穌爲神人(God-man)。事實上，他之所以會陷入牢獄，也就是因爲他爲這位神人、及這關乎全人類生命的真理做見證。這封信裡保羅提到他在監獄裡的遭遇，指出在獄中時，他被看待如同一個危險的罪犯。他寫道他就像一個囚犯遭受捆綁，但他並不是一個被擊退的人。他知道上帝的話不會被捆綁。一個信仰也不會因爲它的領袖被下在監牢中便會毀滅。偉大的理想是不會被腳鐐給銬住的。保羅如此信實地傳揚基督的福音，現在也有人繼續在傳揚，且透過這封從羅馬監獄所寄出的信，保羅自己仍繼續爲耶穌基督做見證。
 
-保羅接受了這個困境,因將它視爲自己被耶穌基督差派之後,傳道經歷的!部分,而且他也深深覺得,在最後的試驗來臨之時,他也不會膽怯、猶豫。他現在所忍受的,是「爲了上帝所揀選的子民忍受這一切,好使他們也能得到那從基督耶穌來的拯救和永恆的榮耀。」「被選出的子民」(theelect),較好的翻譯是「被揀選的子民」(thechosen)。所以,如果保羅一直持守他的信心直到生命的末了那些跟隨他的人,就能因他的模範而得到支持與認可。試想,假如這位向外邦人宣揚福音的偉大使徒,在他遭受迫害的時候否認了他的主,誰能臆測他在所有基督徒當中所造成的傷害呢?保羅對於自己忍受苦難的了解及其重要意義,爲後來的人預備了一個方向當早期基督徒在面臨殉道的時候,都會引用保羅所說的話,成爲他們讚美詩的!部分,來激勵自己。這是一段值得我們擺上信心的一段話
+保羅接受了這個困境，因將它視爲自己被耶穌基督差派之後，傳道經歷的!部分，而且他也深深覺得，在最後的試驗來臨之時，他也不會膽怯、猶豫。他現在所忍受的，是「爲了上帝所揀選的子民忍受這一切，好使他們也能得到那從基督耶穌來的拯救和永恆的榮耀。」「被選出的子民」(theelect)，較好的翻譯是「被揀選的子民」(thechosen)。所以，如果保羅一直持守他的信心直到生命的末了那些跟隨他的人，就能因他的模範而得到支持與認可。試想，假如這位向外邦人宣揚福音的偉大使徒，在他遭受迫害的時候否認了他的主，誰能臆測他在所有基督徒當中所造成的傷害呢?保羅對於自己忍受苦難的了解及其重要意義，爲後來的人預備了一個方向當早期基督徒在面臨殉道的時候，都會引用保羅所說的話，成爲他們讚美詩的!部分，來激勵自己。這是一段值得我們擺上信心的一段話
 
 如果我們已經跟祂同死，
 我們就會跟祂同活。
@@ -38,9 +38,21 @@
 祂依然信實可靠，
 因為祂不違背自己。
 
-第一句表達了那些爲基督而死，也將與祂同活的人的信心。因著這般信心早期基督徒面對死亡時，並不恐懼。第二句則是對忍耐到底這項功課的呼召。在此，這些動詞的時態相當地耐人尋味。接在「如果我們已經跟他同死」之後的句子，在希臘文的時態中是一個單一的動作。而在「如果我們忍耐到底」這幾個字之後，所用的時態卻是一個連續性的動作。事實上，有時爲基督而死，比活著卻不斷地面對迫害還來得容易呢!早期的基督徒都相信那與基督一同忍耐到底的，將來也必與祂一同掌權。而第三句的動詞用的卻是未來式。本句應當翻譯成:「假如我們要否認他。」它似乎暗示著基督不太可能被祂的信徒所棄絕。第三句是一個嚴正的警告，但它並不會比耶穌在馬太福音十章13節的警告來得更嚴厲。假如我們在人面前不承認耶穌的話，將來在天國，祂也會在父前不承認我們。所以當我們鼓勵人要有信心，且對那些忍耐到底的人承諾有永生，我們就免不了想知道，那些無法忍耐的人最後的遭遇將會如何?第三句提供我們一個嚴正且必要的警告，第四句卻是一個充滿希望的信息。當然，如果要把第四句翻譯成比第三句更嚴厲的警惕也是可以的。它說明了基督必忠實遵守賞罰的標準及要求。整本聖經最偉大的主題就是上帝的信實，雖然人背棄了祂。然而可以確信的是，並不是我們每一顆搖擺不定的信心，都會被我們的上主以嚴厲的審判加以否認和拒絕。記得保羅寫給帖撒羅尼迦教會的話「但是，主是信實的；也會使你們堅強，使你們不受那邪惡者的侵害。」(帖撒羅尼迦後書三章3節)假如我們對基督充滿信心的話，我們就能坦然無懼地面對那聿官11試驗的日子。當我們想起保羅，就想到他時常回想耶穌道成肉身時所表達出來的關懷與愛心，我們就能明瞭上帝的信實其實就是一個希望的表達。
+第一句表達了那些爲基督而死，也將與祂同活的人的信心。因著這般信心早期基督徒面對死亡時，並不恐懼。第二句則是對忍耐到底這項功課的呼召。在此，這些動詞的時態相當地耐人尋味。接在「如果我們已經跟他同死」之後的句子，在希臘文的時態中是一個單一的動作。而在「如果我們忍耐到底」這幾個字之後，所用的時態卻是一個連續性的動作。事實上，有時爲基督而死，比活著卻不斷地面對迫害還來得容易呢!早期的基督徒都相信那與基督一同忍耐到底的，將來也必與祂一同掌權。而第三句的動詞用的卻是未來式。本句應當翻譯成：「假如我們要否認他。」它似乎暗示著基督不太可能被祂的信徒所棄絕。第三句是一個嚴正的警告，但它並不會比耶穌在馬太福音十章13節的警告來得更嚴厲。假如我們在人面前不承認耶穌的話，將來在天國，祂也會在父前不承認我們。所以當我們鼓勵人要有信心，且對那些忍耐到底的人承諾有永生，我們就免不了想知道，那些無法忍耐的人最後的遭遇將會如何?第三句提供我們一個嚴正且必要的警告，第四句卻是一個充滿希望的信息。當然，如果要把第四句翻譯成比第三句更嚴厲的警惕也是可以的。它說明了基督必忠實遵守賞罰的標準及要求。整本聖經最偉大的主題就是上帝的信實，雖然人背棄了祂。然而可以確信的是，並不是我們每一顆搖擺不定的信心，都會被我們的上主以嚴厲的審判加以否認和拒絕。記得保羅寫給帖撒羅尼迦教會的話「但是，主是信實的；也會使你們堅強，使你們不受那邪惡者的侵害。」(帖撒羅尼迦後書三章3節)假如我們對基督充滿信心的話，我們就能坦然無懼地面對那聿官11試驗的日子。當我們想起保羅，就想到他時常回想耶穌道成肉身時所表達出來的關懷與愛心，我們就能明瞭上帝的信實其實就是一個希望的表達。
 
 
 
+**蒙嘉許的工人(二章14-26節)
+下列經文的背景是面對迫害與試驗時的提醒。在受審判的時刻，每個基督徒都表現出他們最真實的忠誠。他們的忠誠在他們耐心忍受迫害時展現出來，甚至如果必要的話，他們還會以死明志，但在一般正常運作的教會事工中去分辨一個基督牧者的真僞也是同樣地重要。當教會中有出現教師扭曲福音的意義，誤解生命意涵的情況時，這樣的分辨更顯得格外重要。因此，提摩太提醒這些在以弗所的教師們，必須要忍耐、忠心，並且要在主面前避免用荒唐無稽，無法造就人的空談浪費時間或造成教會的困擾。一個基督教師必須永遠堅立在福音的真理上他不能捲入毫無基督教意義及生命的言談或辯論之中。提摩太正盡自己全力成爲神眼中蒙嘉許的工人，一個「問心無愧的人，正確地講解真理的信息。」「真理的信息」指的就是福音的信息。能正確講解真理信息的教師，就是一位看見上帝透過耶穌基督，向人所啓示真理的意義，並且了解福音在人生命中重要性的人。「真理的信息」並不是指寫下來的文字，而是這些文字所指的耶穌基督本身。不過我們對耶穌基督的了解，仍是來自於這些文字本身，所以，我們如果期盼了解福音對全世界的意義及重要性，我們就必須認真地研讀聖經。第15節保羅鼓勵我們努力研讀聖經，因爲這樣做，我們身爲基督的僕人”才能得到上帝的允許去傳講真理的信息，我們應該關心的是從上帝而來的嘉許，如此，我們可以自由地傳道不再爲贏得人的嘉許而限制了解釋聖經的態度
+
+此外，在第16到第18節中提到的是那些假的教師，他們的教訓無法引導人建立一個聖潔、公義的生活，這些散播在教會裡的假教訓，有如散播在體內，破壞健康肌肉的毒瘡，其中兩個假教師爲舒米乃和腓理徒，提到舒米乃可能是因爲他和提摩太前書1章20節所提到的亞歷山大一樣都失去清白的良，毀壞了他們原有的信仰。我們沒有資料可以說明這些人所信仰的異教邪說的本質.這裡所提及的"似乎是相信基督教的復興與重生，卻不承認基督死而復活的事實，對許多希臘人而言，他們不能接受一個人的身體可以死而復活，他們寧可認爲，那是一種靈魂的不朽。舒米乃和腓理徒的錯誤，可能來自一種異端，認爲基督徒所期盼身體的復活是一種強辯。但不論異教的內容爲何，它的起因都因爲以弗所的基督徒團體中，有一些成員推翻或顛覆他們原有的信仰
+
+關於那些被假教師*如舒米乃和腓理徒等人的錯誤教5所困擾的人。.aa此寫道：「上帝所建立那鞏固的根基是不動搖的。，在這基石上面刻著：『主認得屬祂的人」，又刻著：『那自稱爲屬主的人必須離棄邪惡"，」如同一個年邁的人，知道自己所剩的日子不多：保羅相當關心教會的未來，但他深信基督教會雖然遭受異教邪說的困擾，仍然可以堅持下去，因爲上蒂已經將祂的教會建立在鞏固的根基上。保羅的這兩句話，恰可用來形容教會聖殿的基礎。第一個刻在教會的印記是：r主認得屬祂的人」.這句話可能摘錄自摩西在可拉叛變之時所說的話(民數記十六章5節).可拉和一些人向摩西挑戰，質疑他受上帝差遣引導以色列人民的職份與權柄，而面對這項挑戰，摩西說上主祂自己會親自顯明誰是屬祂的。接著在後續發生的事件中，摩西的領袖地位被確立了.但我們並沒有纪要特別以可拉叛變爲例子，來了解神知道誰是屬祂的簡單原則。我們的主耶穌基督看重所有奉祂名傳道及教導的人。祂知道真僕人跟假僕人之間的差別。祂知道誰是祂可以信賴依靠的人*每個基督的僕人，當他讀到這些話時，應當深信自己是與主一同堅立的。他應當enEN否在福音的了解上有何錯誤或者在性格上有何缺點，以致上主無法有效差遣他參與各種服事，教會之所以能永遠堅立，並通過時間的号驗，乃是在於上帝有能力呼召人來歸向祂自己”就如祂呼召保羅一樣，然後差派他們出去服事
+
+第二個刻在教會的印記是，「那自稱爲屬主的人必須離棄邪惡」。獲得嘉許的僕人的第一個記號，便是在教義教導上能夠純正，並且正確地傳講真理的信息;而第二個記號則是在生活上也能持守純正，一個主的僕人必須在傳講福音給他人之前，先落實應用在自己的生活上，教義的健全和純正很重要.但它必須同時離棄邪惡。記得這裡舒米乃在他的信仰毀壞之前，就已失去他清白的良心(提摩太前書1章9-20節)
+
+第20到第26節繼續提醒那些蒙嘉許的僕人，和不被主人所接受的僕人。他們之間的差異，這裡所舉的例子是一個大屋子裡的各種器皿，有些是金器、銀器其他的則是木器，瓦器，有些是被設計在高貴的場合中使用。有些則是用來盛裝垃圾及穢物的，所謂「脫離一切邪惡的事」的定義，保羅的建議是：「不要像少年人意氣用事，」而這些少年人的意氣用事包含了：性生活的墮落，無法控制對酒精的飢渴，放縱食慾，賭博，褻瀆神，以及沉迷於世俗的宴樂。提摩太並沒有讓自己沉迷在這些少年人的私慾中，他反而是「要跟那些心地純潔、祈求主幫助的人一同追求正義、信心，愛心，與和平」，這裡的「心地純潔」指的就是，主所要求那些願意跟隨祂的人，他們全然的忠心，一個純正的生活便是主所嘉許的僕人，込須具備的第二個重要的記號
+
+接在這項訓諭之後.是關於主的僕人，一段積極誠懇的描述。主的僕人不但「不可爭吵」，他還必須「和氣待人，殷勤善導，處處忍耐.用溫柔規勸敵對的人」有時持續這些關於教會的辯論，它所帶來的痛苦，對我們是一個提醒，然而卻很少人留心注意這樣的忠告。主的僕人絕對不能和異教異端妥協，而是要尋求引導他們悔改，並轉向真理的知識。像舒米乃和腓理徒這一些假教師，已經掉入了魔鬼的網羅中，受他控制遵行他的旨意。這些教導錯誤教義的教師對惡者可是相當有用的！但保羅仍是希望這些人能逃離魔鬼的陷阱，並且成爲上主所可接納的僕人。大體而言，在這幾節經文裡，保羅認爲在教義教導的健全之外，還要加上溫柔的心，並要有純正的生活，這些才是上主真正僕人的記號。
 
 
