--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -252,7 +252,7 @@
 
 　　最後，預言應對人的行為產生的唯一影響，就是驅使人作好心理準備，以迎接預言的應驗，同時也準備好面對預言的不應驗。可是，行動的準則，必須是神啟示的話語和靠這話語管理生命的智慧。
 
-　　我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
+　　我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復甦，這樣的想法是不正確的。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#預言的恩賜][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
