--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -1191,7 +1191,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　最後，當靈恩派先知預言未來的事情，用單數第一人稱的措辭表達，一如這預告本身是神直接的宣稱時，單純從他們語言表達的形式，或者單從發出預言這個行動本身去推論預言內容的真確性，肯定是一種錯誤。舊約提供的一個可以恒久應用的聖經準則，就是一如所有假定的預言的教義內容必須受考驗（參申一三 l—3），預言的真確與否，就必須看他們是否應驗（申一八 22）。這些預言應對人的行為產生的唯一影響，就是驅使人作好心理準備，以迎接預言的應驗，同時也準備好面對預言的不應驗。可是，行動的準則，必須是神啟示的話語和靠這話語管理生命的智慧（參申二九 29；箴一至九章）；我們不要隨便相信自封為先知的人那些很可能誤導人的預言。（寫到這裏，不禁令我聯想起在我身上發生的一件事。一九七九年，當時有一位相當誠懇的靈恩派先知規勸我，他說神並不是像我心裏認定的要引導我到溫哥華寫作，而是要我在城市教會內帶領基督徒渡過一段大分裂的時期。嗨，似乎今天的教會一如一九七九年的模樣，而我呢？此刻正坐在這裏寫這本書。）
 
-　　我們不應以為預言是久已作古的第一世紀恩賜，今天復蘇過來，因而在語言表達形式上以盛裝出場，使他與十八、十九世紀以還所有其他基督教溝通的形式分別出來；肯定說，恰當的結論反而是我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。傳講訊息就是教導神的真理，並加以應用，這種具備應用實踐的教導就是預言，以前如此，將來也是如此。今天在靈恩派信徒中間宣講的預言，並不比任何時間其他任何團體所宣講的更加優勝，過去、現在、將來也是如此。有些人在宣講之前沒有默想，採用第一身單數表達，其文法猶如是神自己直接宣告，把聖經真理應用在各種處境和不同的人身上，又為發生了的事情歡喜慶賀，同時瞻望未來要發生的一切。無可置疑，神也曾在這個時代，藉著這一切祝福那講的和那聽的人。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
+　　我們不應以為預言是久已作古的第一世紀恩賜，今天復甦過來，因而在語言表達形式上以盛裝出場，使他與十八、十九世紀以還所有其他基督教溝通的形式分別出來；肯定說，恰當的結論反而是我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。傳講訊息就是教導神的真理，並加以應用，這種具備應用實踐的教導就是預言，以前如此，將來也是如此。今天在靈恩派信徒中間宣講的預言，並不比任何時間其他任何團體所宣講的更加優勝，過去、現在、將來也是如此。有些人在宣講之前沒有默想，採用第一身單數表達，其文法猶如是神自己直接宣告，把聖經真理應用在各種處境和不同的人身上，又為發生了的事情歡喜慶賀，同時瞻望未來要發生的一切。無可置疑，神也曾在這個時代，藉著這一切祝福那講的和那聽的人。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
 
 [[Keep_in_Step_With_the_Spirit__notes.org#預言的恩賜][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
@@ -1225,6 +1225,11 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 結論
+*** 2_表記恩賜
+　　關於表記恩賜的復還論，也是靈恩運動從古老五旬節派承受的，這理論並不適用；沒有人能夠肯定新約說方言、翻方言、醫治和行神跡的恩賜已經恢復，似乎亦不合乎事實，而來自聖靈的預言，實質不是新的啟示（雖然在聖經時代，新的啟示往往是預言的一部分），而是將已經啟示的真理應用在人身上的一種能力，這種能力不是單單規限在靈恩派圈子內；其實，這種能力一直以來都存在教會之中。然而，靈恩運動強調運用每個人都各自擁有一些的屬靈恩賜，積極推動教會總動員事奉，是完全正確的，也為軟弱和受創傷者特別帶來支持和扶助的豐富資源。
+　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 *** 4_說方言
 　　靈恩派方言，作為一種經選擇的、在神面前非語言的自我表達方式（所謂經選擇，在他們的信念裏，是神的旨意叫人這樣選擇的），在無可避免地多樣化的基督徒經驗裏自有他的地位；而在基督徒經驗中，種類繁多的靈修方式，正好反映了文化與個人的不同構造和特質。似乎看來很明顯的，就是說方言作為一種屬靈操練，的確豐富了一些人的屬靈生命，但對別的人來說，卻是毫無價值的不敬虔表現。有些人嘗試這樣操練，及後見證說發現自己所做的毫無屬靈實質，然而另有些人開始了這種操練後，結果卻經歷與神更深的相交；我們無理由懷疑他們任何一方面的見證。用方言禱告可以幫助一些過分理智的人釋放和解凍情感，正如結構分明、用言語清楚表達的禱文可以幫助一些過分感性的人穩定情緒、弄清思想。那些認識到說方言並非神為他們預備的道路的人，以及另外一些體驗過說方言豐富了他們的屬靈生命的人，都不應該將自己的方式強加於別人身上，也不應該因為別人與自己不同而貶抑他人遜於自己，同時若然在自己的陣營中有人因著相信是神的帶領而轉移到對方的陣營之中，亦無需為此信心動搖。用方言禱告及不用方言禱告的人都同是向主禱告；他們或站立或跌倒都是向他們的主人交代，並非做給其他僕人看。一如在基督裏面無分猶太人或希臘人、為奴的或自主的、男性或女性，同樣在基督裏亦無分說方言的或不說方言的。即使（正如我所懷疑的，雖然無法證明）今日的說方言者不同于昔日哥林多信徒所說的方言，我們也不應該禁止他們說方言，而說方言者亦不應該認定一級的基督徒必需說方言。
 
