--- a/The_Laymans_Bible_Commentary_23__orig.org
+++ b/The_Laymans_Bible_Commentary_23__orig.org
@@ -1,29 +1,76 @@
-*提摩太前後書
-**p156
+* 提摩太前後書
+** 提摩太前後書導論
+給牧者的信 提摩太前後書和提多書素來被稱作「教牧書信」。帖撒羅尼迦前後書是寫給 教會的;而提摩太前後書與提多書則是寫給個人的。然而,它們也並非純屬私人 書信,而是保羅寫給提摩太和提多,教導他們如何做牧者的工作。同時,這些書 信時常涉及神學,並且包括一些對教義的重要陳述。大致上來說,這些書信的觀 點是極爲實際的,討論到在教會任職者的資格,辨別正確或錯誤教導的能力,以 及保存福音信息的純正。其中還談到牧者工作在管理方面的細節,例如對待寡婦 的方式、視群眾年齡層及階級的不同調整福音信息,以及帶領會眾禮拜。因此 這些書信對於任何一個積極從事教會工作的人來說,都是有助益的 
+
+
+寫作時間 在新約中,帖撒羅尼迦後書之後爲提摩太前書,但這並不意味著提摩太前書 ESE接著帖撒羅尼迦後書之後即被完成。帖撒羅尼迦前後書可能是保羅書信的第1 部,並且我們可合理而準確地推算其於主後五十或五十一年完成。那些認爲提摩 太前後書與提多書係由保羅寫成的人,都同意這三卷書是保羅書信的最後部份 承認保羅是上述書信的作者,並不能因此保證可以準確地推算出寫作的時間;要 做到這一點需要對保羅的一生做整個的重新組織。但大致上仍有一共識,認爲寫 IF的時間約在主後六十五至六十七年間。那些認爲保羅不是這些書信之作者的人 寫作時間的認定上有更大的出入,但其中大多數的人認爲應介於第一世紀至第 一世紀中葉問。無論哪一種看法,我們都在帖撒羅尼迦前後書及提摩太前後書與 多書中,發現保羅的第一部及最後一部書信之間的對比 對作者的認定會影響解釋 爲什麼帖撒羅尼迦前後書被公認爲保羅所寫,而提摩太前後書與提多書卻都 
+
+
+引起爭論?雖然在此不可能對這問題提出答案,但處理一些所涉及的議題仍是必 要的,因爲我們對於這些議題的態度,必會對我們現今如何理解這些書信的信息 有所影響。 任何一個讀新約的人必定會觀察到,提摩太前後書於一開頭的經文中清楚地 標明爲「作基督耶穌使徒」的保羅,寫給他信仰上的兒子提摩太。提多書也以類 似的方式註明。在此,關於經文的正確性是毫無疑問的。這些書信若非出自保羅 之手,便是由保羅的跟隨者之一所寫,再以保羅的名義發表。當研究新約的學者 逐字讀完這些書信,他將發現這些書信中包含了爲數可觀的自傳材料,而以保羅 之名發表。舉例而言,提摩太前書第一章中有一處提到提摩太是保羅在信仰上的 兒子(提摩太前書一章2節) ;有一段令人動容的自述,描寫保羅回想他迫害基 督徒團體時的日子,並想到他自己乃是罪人中最壞的一個(提摩太前書1章12 S 17節) ;另一處則提到他對於舒米乃和亞歷山大的懲戒之舉。其他諸如此類的經 節出現在二章7節、三章14 S 15節及四章13節。研究者應該連同這些經節,考查 幾處提到提摩太個人的經文,如五章21、23節及六章14、20節。提摩太後書特別 
+
+
+但所多自12 12 11聖 15 、後 的,我都對書及後 具有豐富的傳記內容。例如,在第一章談到了提摩太的母親和外祖母,以及提摩 太被按手受任聖職(提摩太後書一章556節) ,還有保羅個人的信仰見證(提 摩太後書1章11 12節) ,及他對阿尼色弗的極力讚許(提摩太後書1章15 S 18 節) 。同樣地,在提摩太後書四章65 18節,提到保羅的重要言論:他到了生命 的盡頭並仰望公義的華冠、對於底馬離棄他而作的批評, 一些個人的要求,還有 提及他在接受審訊時,眾人都棄他而去,以及他相信上帝將拯救他脫離一切邪惡 並保守他直到永生的國度。我們還應注意,保羅在此附帶提到因病留在米利都的 特羅非摩。保羅在提多書中,則是對於提多在克里特教會的管理上,給予具體的 指示,並且還提到一些個人的事,如打算在尼哥波拉過冬的計劃(提摩太後書- 章5節;三章12-15節) 。一般唸新約的讀者,將會由於在書信一開頭的身分介 紹,以及許多自傳式的內容,而相信教牧書信是由保羅所寫的。但特別鑽研提摩 太前後書及提多書的學者,知道這當中仍有一些問題尚未獲得解答。教牧書信與 其他保羅書信所使用的語言,有顯而易見的差異。的確,在希臘原文中更容易看 出這項差異,但是在英文翻譯版本中也同樣看得出。一個代表性的例子,是在教 
+
+
+牧書信中有這樣的句子:「這話是可靠,值得完全接受的」(提摩太前書\章15節; 111章1節:四章9節;提摩太後書11章11節:提多書三章9節) ;但這種特別的 表達方式在保羅的其他書信中並未出現。除此之外,我們若仔細地研究還可以發 現,在教牧書信中大概有三分之一的用語,是在保羅早期的書信中找不到的。而 且,即使是在這兩類書信中都能發現的用語,在教牧書信中有也著不同的意義 舉例而言,「正義」( righteousness )這個字在教牧書信中用以形容一種道德品質(提 摩太前書六章11節;提摩太後書11章22節) ;但在羅馬書中,則是用以形容一種 信仰的關係。在教牧書信與保羅其他書信中諸如此類的差異,使得細心的學者懷 疑,這兩類書信是否真有可能出自同一人之手。 風格與內容 敏銳的讀者在研讀教牧書信時,也會察覺在寫作的風格上有不同之處。這種 風格上的不同點較難以具體地把握;不過大致說來,與保羅早期的書信比較之下, 教牧書信的筆調顯然較爲平和有序。即使是對假教師譴責的段落,也都相當冗長 
+
+
+is 再提 而且有點沉悶(如提摩太前書一章357節;提摩太後11章14 S 26節;三章15 91節;提多書1章10 S 14節) 。在教牧書信中有些重要的段落,值得保羅以他最 佳的文筆寫出,但整體看來,它們似乎缺少早期作品中那樣的衝擊與熱情。 比風格上差異更爲重要的,是內容上的差異。仔細研究帖撒羅尼迦前後書的 學者,會立即察覺到,對基督再來盼望之強調,在比重上有了改變。這種期盼在 提摩太前後書及提多書中,仍是信仰上很重要的信條(提摩太前書六章14節;提 摩太後書四章8節,提多書二章13節) ;不過在帖撒羅尼迦前後書裏,幾乎每一 章都可看到這種期盼,並且在許多地方都是保羅進行論證時的主要思想。教牧書 信的主要關懷似乎轉變到別的主題。作者非常留意教會組織與架構。在提摩太前 書中,他詳列長老與執事之資格;他教導提多在每個城市設立長老,並再一次列 出長老的資格(提多書一章559節) 。我們可清楚地看到,這些人被公認爲在 主名下的教會中的督導者。雖然在帖撒羅尼迦教會中,確實也施行著一種教會紀 律(帖撒羅尼迦前書五章12 13節”,帖撒羅尼迦後書三章14 15節) ,但對這個 教會附帶一提的紀律,已成爲教牧書信的核心。並且顯而易見地,這些晚期書信 
+
+
+中關於任命聖職的教義,在保羅早期的著作中並未如此清楚地表述出來 教牧書信的作者對於保存純正的信仰極爲關心,無論是對於假教師的抨擊 強調健全的教訓、或甚至發展「信仰的託付」的想法,都表現出這樣的關心。在 那些確定是由保羅所寫的書信中,「信仰」被認爲是確實地委身給耶穌基督,以 祂作爲生命中的救主。這個觀念在教牧書信中並未被忽略,但重點卻是放在信仰 的保存上。作者相信基督信仰的精神中,有一種「傳承」;此傳承被界定爲所接 受的託付。它必須被善加守護,並且傳遞給那些努力忠心教導別人的人(提摩太 前書四章6節,提摩太後書二章2節) 。 在保羅生命中的時期 任何研究教牧書信的人,幾乎立即會問這樣一個問題:要將它們放在保羅生 命中哪一個時期?在提摩太前書中,保羅待在馬其頓,是自由之身。他要提摩太 留在以弗所(提摩太前書1章3節) ,且希望能快點去看提摩太(提摩太前書三 章14節) 。在提多書裏 保羅曾待在克里特,並希望在尼哥波立過冬(提多書! 
+
+
+章5節: 111章12節) 。在提摩太後書中,保羅身在羅馬的監牢裏(提摩太後書\ 章17節) 。顯而易見地,他並未在獄中待上一段很長的時間,因爲他提及已留下 以拉都住在哥林多,以及特羅非摩害病而停留在米利都。他在特羅亞時留了件外 衣在加布家裏。他在羅馬時,底馬、革勒士、提多以及推基古都曾在他身旁;但 由於種種因素,他們都離開了,只剩路加仍和他在一起。保羅剛接受了一次審訊 他在亞細亞的朋友都離棄了他,但他依然能夠向外邦人作見證。他催促提摩太儘 快趕去看他(提摩太後書四章958節) 這些相關資料與使徒行傳中對保羅生平的敘述相互吻合嗎?在路加的記載中 確認帖撒羅尼迦前後書的內容並不困難,但學者們一般的共識是,在教牧書信中 與保羅生平有關的資料,並無法符合使徒行傳的敘述 由於這個緣故,那些認爲教牧書信爲保羅所作的人,通常會重新建構保羅的 生命經歷,以支持他們的立場,例如,他們會假定保羅如使徒行傳中記載的,由 羅馬監獄中獲釋,然後他展開了另一個傳道之旅。途中他經過了克里特、馬其頓, 以及以弗所等地。提摩太前書及提多書都記錄了這段旅程,而提摩太後書則記錄 
+
+
+了保羅再次入獄。另一方面,那些不同意教牧書信爲保羅所作的人,通常會認爲 保羅正如路加所述,在羅馬遭囚禁,接著就殉道了 本注釋的讀者可能想問:這場爭辯的重要性何在?舉例來說,希伯來書曾被 列爲保羅書信之一;而在今日,很少人會認爲希伯來書爲保羅所寫。然而,希伯 來書的信息並未受作者爲何人的爭議所影響。討論教牧書信作者爲何人,與這些 書信是否應被接受爲聖經,這兩個問題是有差別的。即使這些書信是在第一世紀 初期產生,它們仍出自保羅一位忠心的門徒之手,這位門徒試圖以他自己的語言 表達他認爲保羅會對那個世代的人所說的話--倘若保羅那時還在世的話。這些 書信對基督信仰的理解,經過教會判斷後,認爲和教會所持守的信仰一致,也和 其他列入聖經正典的書信一致。它們帶著聖經的權威向我們說話,無論它們是否 爲保羅親自所寫作 乍。 那麼,爲何作者的問題這麼重要?在提摩太前書第二章556節中有一段著 名的文字,闡述「基督是上帝和人之間的中間人」這項教義。它是這麼寫的:「只 有一位上帝,在上帝和人之間有一位中間人,就是成爲人的基督耶穌;他犧牲自 
+
+
+己爲要使人類得自由,證明了在時機成熟的時候,上帝要人人得救。」這段文字 不論是保羅大約在主後六十八年所寫,或是他的門徒在後數十年所寫,均是真確 的。然而我們在第7節讀到:「爲了這個目的,我奉差遣作外邦人的傳道者和使 徒,作教師來使他們相信並認識真理。我沒有撒謊:我所說的都是真的!」在此 作者是誰的問題就關係重大。我們或是看待這一節爲保羅真實無僞的見證,或是 認爲它是由保羅門徒在保羅去世後幾年,以他的名義所寫的一段話,雖然這段話 被認爲適用於保羅身上。這兩種看法的確會使我們對這一經節做出不同的解釋 並且,就某個意義而言,教義的表述所具有的權威,也受到我們對於第7節之作 者的認定所影響。在提摩太前書第一章12 S 17節中,有一段傳記,裡頭包含著! 項重要的宣告:「『基督耶穌降世的目的是要拯救罪人』這話是可靠、值得完全接 受的。」不管我們認爲作者是誰,我們均贊同這段話。但作者繼續說道:「我是 罪人中最壞的一個。」(他在此想起他曾迫害教會,這在13節有提到。)他接著又 說,因著他受到的憐憫,基督耶穌顯示了「他充分的忍耐,使我得以作那些以後 要信他、接受永恆生命的人的榜樣。」在這種自傳式的段落中,作者是誰就成爲 
+
+
+我們詮釋經文的關鍵 因此,假使要爲教牧書信寫注釋書的作者,有必要說明他是以何種觀點在詮 釋經文。本注釋的立場是假定提摩太前後書與提多書皆爲保羅所作。當然,先前 提到有關字彙以及教義著重處有所改變的問題,需要加以說明,不過這些問題無 法得到完整的答案。對於那些接受教牧書信爲保羅所作的人而言,仍有些疑點是 懸而未決的,不過他們對這些疑點有一些建議和提示。保羅早期的書信與教牧書 信之間,相隔約有十五年;在這段時期中,保羅可能在用字上有些改變。用字上 的差異有可能是因爲不同的人在記錄這些書信時所造成的。通常是由保羅口述信 件的大意,請人代筆記錄,並在信末簽名以示身分。在寫作教牧書信時,他可能 將他的想法列個大綱,並允許他的書記在實際撰寫時有相當的自由。也有可能保 羅的確有寫這些書信,但在他去世幾年後由他的門徒加以增補、擴充而成。這樣 一來,我們無從辨識哪些部分是真正出自保羅之手,哪些是後來增加的。在此情 況下,我們仍舊必須將這些書信視爲保羅所作。 雖然主張教牧書信爲保羅所作會面臨一些不容輕忽的問題,但要以其他方式 
+
+
+來解釋這些書信的來源,會面臨更大的問題。再者,尙有其他充分的理由可以肯 定保羅是作者,其中之一就是書信開頭的自稱以及書信當中的傳記材料;而如此 顯而易見的明證不應被輕易地一筆抹煞。此外,在教會剛成立之初,只有馬吉安 (Marc ion)沒有將教牧書信列入保羅書信,但他這麼做是出於教義的理由。除此之 外,初代教會的作者均一致地接受這些書信爲保羅所作,並且加以引用。當我們 想到起初保羅在寫信時是相當用心和審慎的,我們必能了解,在保羅去世後隔一 段時間所寫成的書信,要被毫無疑問地公認爲保羅所作,這並不容易。各個時代 偉大的注釋家,雖然也同意以批判的方式研究聖經,但基於對各種證據的詳加考 察,仍認定保羅是教牧書信的作者,這一點我們也應給予高度的重視。相對於他 們考證的結論,我們還必須了解,今日大多數的新約學者並不認爲教牧書信爲保 羅所作。但仍有一些學者相信這些書信爲保羅所作;同時,有更多學者認爲這些 書信中保存了保羅書信的精髓 許多人讀了教牧書信之後,會發現他們傾向接受保羅是作者的看法,因爲他 們覺得這些書信的傳記部分是真實的。,如果作者不是保羅,有誰會給阿尼色弗 
+
+
+樣特別的稱讚(提摩太後書1章15 5 18節) ,或是 因爲提摩太消化不良及經常生 病而建議他喝少許的酒(提摩太前書五章23節) ?在研讀提摩太後書時,其中的 傳記部分更令人感到所言不虛。書信中描繪這位偉大使徒最後一次坐牢的景況 確實是真實可靠的,保羅的一些朋友離棄了他,另有一些朋友趕赴危險的任務 只有路加陪伴他。保羅接受審訊,而這使他得以有機會爲基督作見證。他知道自 己即將離世,因而渴望在臨終前見提摩太一面。在此脈絡下,讀者可讀提摩太後 書四章6S8節。有誰不會被這股肺腑之言感動呢?讀到有關這個審訊的敘述(提 摩太後書四章16 S 17節) ,並看到保羅接著說:「主一定會救我脫離一切邪惡 接我安全地到他的天國去」 (提摩太後書四章18節) ,任何人都可感覺到,這是保 羅對提摩太最後的遺言,也是透過提摩太向教會的最後的遺言 ITI。 要認定作者是保羅,會碰上一些相關的問題;這些問題雖都是真實的,但不 一定具關鍵性。例如,即使用字遣詞上有所改變,但人在不同的處境、生命的不 同階段所使用的語彙的確可能有所不同。教義上的著重處有所轉移,但這可被設 想爲因保羅的年紀漸長,且基督的再來似乎延遲了。對於一個即將卸下世上工作 
+
+
+的人來說,關心教會的組織是極爲自然的。同樣地,鑑於保羅在寫這些書信時所 面臨的處境,則他對福音的純正性以及信仰的託付有日益加深的關切,也是合情 合理的。此外,保羅在歌羅西與腓利門書中對自己身繫囹圄的態度,和在提摩太 後書中表達的有所不同,因此,可說是有必要假定保羅在羅馬曾兩度入獄 
+** p153
+上帝的福音 提摩太後書一章15 18節 問安( 一章152節) 對於提摩太後書的背景資料,除了這封信所提供之外,其他任何地方無從得 知。這是一封非常私人性卻又具啓示性的信。當保羅寫提摩太前書時,他還是自 由之身,他差派提摩太往以弗所去,且希望能和他在那裡儘快會合。而寫給提多 的信也是保羅能夠自由、積極從事宣教工作之時所完成的。但提摩太後書卻是保 羅身處羅馬監獄時才著作的書信。此外,比較這封信與保羅所寫作第一封監獄書 信(如歌羅西書) ,反映出截然不同的態度。當保羅第一次下監時,他正等候審 判,如同一位尚未判刑的人,仍有機會期待被釋放。但是當他第二次下監時,整 個羅馬地區對基督教的態度已經全然改變。寫這封信時,保羅已是一位被判有罪 的人, 一位被迫害教派的領袖。經過初審,他已無法倖免於死刑的結局,所以對 
+
+
+標! 的是 他的朋友而言,接近保羅是一件很危險的事。除了路加之外,不知什麼原因,保 羅所有的朋友都離棄了他。阿尼色弗則找他找得很辛苦。在這種處境下,保羅這 封信就成爲他留給提摩太最後的遺音;不僅如此,它更像是一個偉大的使徒留給 他所服事過的教會一段最後的話語。在這封書信裡,保羅試著激勵提摩太面對迫 害,因此,他不停地描繪著一個有信心的基督徒牧者的形象。在這封寫給他主內 親愛兒子的親密信件中,保羅表達了他深切的關懷,如同他正站在人生道路的盡 頭,回頭看他作使徒的生命,以及往前看那在墳墓背後與基督同在的生命 問安的部分仍是依循著提摩太前書的格式。保羅再一次確認自己使徒的身分 而且他是基督耶穌所差派來的人。他成爲使徒並不是因爲自己的選擇,乃是憑著 上帝的旨意。至於他宣教的中心目標乃是爲了宣揚「藉著基督耶穌應許的新生 命」。他寫信給提摩太就好像寫給一位他所愛的孩子。在前書裡,保羅強調提摩 太是他在信仰中真正屬靈的兒子;在後書中,重心則轉移到他對提摩太深切的疼 愛。第2節的後半段在這兩封書信中則是相同的
+
+** p156
 給我們的靈不使我們膽怯；相反地，他的靈會使我們充滿力量，愛心和自制。」當保羅和提摩太領受聖職的時候，他們便接受了從天而來屬靈的供養，使他們的靈魂得著力量、愛和自制。
-**提摩太爲耶穌基督所做的見證(一章8-10節)
+** 提摩太爲耶穌基督所做的見證(一章8-10節)
 因爲提摩太已經接受了上帝所賜的力量，他便放膽宣揚福音。他不以爲耶穌基督做見證爲恥，也不會因保羅是個囚犯而以他爲恥。這是第一次我們得知保羅的處境。他正在爲他的信仰受苦，而提摩太也必隨時預備與他一起爲福音分擔苦。
 
 此處所提及的福音及上帝的能力是基督福音一個簡要的概覽。上帝已經「拯救我們，呼召我們作他的子民，並不是因爲我們有什麼好行爲，而是出於他的旨意和恩典。他在萬世以前就藉著基督耶穌把這恩典賜給了我們。」保羅強烈地主張救恩最根本的基礎在於上帝的心意，祂要透過基督的救贖工作，爲祂自己拯救祂的百姓。因爲保羅在教牧書信強調好行爲的重要性，第9節的經文就更值得留意。上述保羅的話，與提多書三章5節相同，都指出單靠好行爲來做我們渴望救恩的基礎是行不通的。正如保羅所說，救贖是單單藉著信心、單單靠著恩典，單單榮耀上帝。這救贖最根本的奧祕是上帝的心意，一種自由卻又負責任的心意。
 
 福音的根本在於上帝決定透過耶穌基督拯救世人。直到救主耶穌基督的出現，上帝永恆的救贖旨意，才完全地向我們顯明出來。耶穌的工作在下列經文中有如此的簡要說明：「基督已經毀滅了死亡的權勢，更藉著福音把不朽的生命彰顯出來。」當然耶穌並沒有廢除肉體的死亡。在耶穌來到世上之前和之後，所有人的生命都只有走向死亡一途。但耶穌戰勝了死亡。祂死了並且在第三天復活。祂爲上帝所應許的死後復活的生命做見證。耶穌告訴門徒，說祂離去是要爲他們預備地方，祂必再回來接他們到祂那裡去，他們必定與祂同在一個地方(約翰福音十四章3節)。耶穌消除了門徒對死亡的恐懼，並且提供一個確定的盼望，就是他們都將進入天國的家。如此，祂藉著福音，將「不朽的生命」顯明出來。藉著耶穌的工作，在上帝神聖的啓示裡，顯明了生命不朽的盼望。所以，在福音的信息中指出，人被呼召，一同來分享上帝永恆的救恩。
 
-**p160
+** p160
 守聖靈所託付給他的真理的想法相符。提摩太之所以能夠傳揚福音的真理給當時的人們，是因爲聖靈內住所賜予他能力的緣故。
-**稱讚阿尼色弗(一章15-18節)
+** 稱讚阿尼色弗(一章15-18節)
 在這封勉勵提摩太的書信中，插入了兩段保羅個人的回想。第一段是一個很不愉快的回憶，第二段則是他對另一個陌生人深深地致敬。提摩太此時已經聽說，在亞細亞已經有一些基督徒背棄了保羅。這件事可能起因於那些當時在保羅接受審判時支持他的人，最後卻都失敗了。這封信在此提及當時羅馬緊張的情勢之一，對當時的人們而言，認同保羅及他所做的工作都是一件危險的事。保羅提到兩個背棄他的人的名字，保羅在以弗所認識他們，所以特別提起他們的名字：腓吉路和黑摩其尼。
 
 面對許多人的失敗與叛離，阿尼色弗所表現的忠誠顯得令人激賞。他和他的家人都住在以弗所。提摩太也熟知他在教會中服事的擺上。不知什麼原因，阿尼色弗也來到了羅馬，在那裡他遍尋所有監獄中的囚犯，直到他找到了保羅。在當時這是相當不容易，因爲保羅可能被嚴密地看管著。但阿尼色弗找到了他，並且多次前往探望。阿尼色弗並不畏於認可這位已被判刑、且被法律禁止之宗教的領袖所帶來的危機。他的探訪對保羅的幫助非常大，他爲這位孤寂的階下囚提振精神，同時也爲這位偉大使徒的心靈帶來力量。保羅祈求主能夠憐憫阿尼色弗一家人，也祈求主在審判的那日憐憫他這個朋友。在這封信的最後，保羅還向阿尼色弗一家人問安(四章19節)。有些聖經註釋者認爲，保羅寫這封信時，他的這些話暗示著阿尼色弗已然過世。所以，保羅才會爲了一個已經過世的人祈求上帝。另外還有一個更有可能的假設就是，阿尼色弗不在以弗所的家中而遠離在外。
 
 
 
-*信實的基督徒牧者_提後二章
-**一個有紀律的福音牧師(11章1-7節)
+* 信實的基督徒牧者_提後二章
+** 一個有紀律的福音牧師(11章1-7節)
 面對亞細亞基督徒的背棄，以及阿尼色弗的忠心耿耿，保羅更加鼓勵提摩太必須在德行上及屬靈的能力上剛強起來。第2節保羅又回到他對信仰傳承純正性的關懷。在此保羅所指的，當然是福音信息的內容。提摩太已經從保羅及其他見證人領受了這信息，現在輪到提摩太去傳遞他所領受的基督信仰。當然，這必定是「相同的」信仰，絕不是一個更改過的版本。他要把這信仰傳遞給那些在信心上完全，且有能力能夠教導別人的人。保羅如此寫道，因他完全信賴提摩太，及那些被提摩太所教導的人，這些人要傳遞信仰給下一代，使他們對基督信仰有一個更全備的認識。此外，保羅所寫那些偉大的書信，以及在福音書中所保留，初代教會爲主所做的見證，當時都已經被蒐集和記錄下來。因此，那時才會有一本現成的文字資料，成爲基督徒在傳道及教導時的標準規範和材料。
 
 在此保羅表達一個比較急迫的主題，就是他對屬靈的兒子提摩太的關心，期勉他能勝任基督教牧師的工作，並且憑著信心面對迫害的日子。因著這一份關心保羅鼓勵提摩太與他一同分擔苦難，如同一個「基督耶穌忠勇的戰士」。保羅並不是禁慾的苦行者，也不是要求自我折磨、懲罰等精神上的苦行者。但他真心期盼一個基督教牧師應該如同一個基督耶穌訓練有素的戰士，隨時準備忍受困難保羅以三個例子來說明他的想法。首先他舉士兵的例子。一個好的士兵不能被營外的私慾纏擾，他必須完全服從那召他入伍的人命令。一個基督的士兵更是不能被今世的俗務所纏擾，如此他便無法完全順服耶穌做他的主。第二個例證提到了一個運動員的訓練與紀律。沒有一個人可以不經過紀律和訓練而獲得運動競賽的冠軍。一個想要勝任自己所有責任和工作的基督教牧師，就必須學著去約束自己第三個例子是，一個了解勞力是豐收的必要因素，而辛勤工作的農夫。因此，一個牧師的紀律同樣地表達在他宣揚福音時，隨時準備忍受肉體勞苦的態度。這也反應出一個牧師在心理上及精神上的訓練，而且這是牧師生活中，最重要的一部分。有時牧師必須預備心面對不受歡迎的情形，甚至也必須面對因對上主的忠心而帶來的迫害。
 
-**至死信實(二章8-13節)
+** 至死信實(二章8-13節)
 保羅在羅馬書開始的幾節經文中(羅馬書一章354節)，是他整篇信息的濃縮，這也可幫助我們來了解提摩太後書11章9節。經歷了死而復活，耶穌宣稱祂帶著能力，是上帝的兒子。從大衛以來，耶穌的祖先都有肉體，然而耶穌全然的神性與人性卻是一個新的象徵。保羅所宣講的福音就是爲了見證耶穌爲神人(God-man)。事實上，他之所以會陷入牢獄，也就是因爲他爲這位神人、及這關乎全人類生命的真理做見證。這封信裡保羅提到他在監獄裡的遭遇，指出在獄中時，他被看待如同一個危險的罪犯。他寫道他就像一個囚犯遭受捆綁，但他並不是一個被擊退的人。他知道上帝的話不會被捆綁。一個信仰也不會因爲它的領袖被下在監牢中便會毀滅。偉大的理想是不會被腳鐐給銬住的。保羅如此信實地傳揚基督的福音，現在也有人繼續在傳揚，且透過這封從羅馬監獄所寄出的信，保羅自己仍繼續爲耶穌基督做見證。
 
 保羅接受了這個困境，因將它視爲自己被耶穌基督差派之後，傳道經歷的!部分，而且他也深深覺得，在最後的試驗來臨之時，他也不會膽怯、猶豫。他現在所忍受的，是「爲了上帝所揀選的子民忍受這一切，好使他們也能得到那從基督耶穌來的拯救和永恆的榮耀。」「被選出的子民」(theelect)，較好的翻譯是「被揀選的子民」(thechosen)。所以，如果保羅一直持守他的信心直到生命的末了那些跟隨他的人，就能因他的模範而得到支持與認可。試想，假如這位向外邦人宣揚福音的偉大使徒，在他遭受迫害的時候否認了他的主，誰能臆測他在所有基督徒當中所造成的傷害呢?保羅對於自己忍受苦難的了解及其重要意義，爲後來的人預備了一個方向當早期基督徒在面臨殉道的時候，都會引用保羅所說的話，成爲他們讚美詩的!部分，來激勵自己。這是一段值得我們擺上信心的一段話
@@ -42,7 +89,7 @@
 
 
 
-**蒙嘉許的工人(二章14-26節)
+** 蒙嘉許的工人(二章14-26節)
 下列經文的背景是面對迫害與試驗時的提醒。在受審判的時刻，每個基督徒都表現出他們最真實的忠誠。他們的忠誠在他們耐心忍受迫害時展現出來，甚至如果必要的話，他們還會以死明志，但在一般正常運作的教會事工中去分辨一個基督牧者的真僞也是同樣地重要。當教會中有出現教師扭曲福音的意義，誤解生命意涵的情況時，這樣的分辨更顯得格外重要。因此，提摩太提醒這些在以弗所的教師們，必須要忍耐、忠心，並且要在主面前避免用荒唐無稽，無法造就人的空談浪費時間或造成教會的困擾。一個基督教師必須永遠堅立在福音的真理上他不能捲入毫無基督教意義及生命的言談或辯論之中。提摩太正盡自己全力成爲神眼中蒙嘉許的工人，一個「問心無愧的人，正確地講解真理的信息。」「真理的信息」指的就是福音的信息。能正確講解真理信息的教師，就是一位看見上帝透過耶穌基督，向人所啓示真理的意義，並且了解福音在人生命中重要性的人。「真理的信息」並不是指寫下來的文字，而是這些文字所指的耶穌基督本身。不過我們對耶穌基督的了解，仍是來自於這些文字本身，所以，我們如果期盼了解福音對全世界的意義及重要性，我們就必須認真地研讀聖經。第15節保羅鼓勵我們努力研讀聖經，因爲這樣做，我們身爲基督的僕人”才能得到上帝的允許去傳講真理的信息，我們應該關心的是從上帝而來的嘉許，如此，我們可以自由地傳道不再爲贏得人的嘉許而限制了解釋聖經的態度
 
 此外，在第16到第18節中提到的是那些假的教師，他們的教訓無法引導人建立一個聖潔、公義的生活，這些散播在教會裡的假教訓，有如散播在體內，破壞健康肌肉的毒瘡，其中兩個假教師爲舒米乃和腓理徒，提到舒米乃可能是因爲他和提摩太前書1章20節所提到的亞歷山大一樣都失去清白的良，毀壞了他們原有的信仰。我們沒有資料可以說明這些人所信仰的異教邪說的本質.這裡所提及的"似乎是相信基督教的復興與重生，卻不承認基督死而復活的事實，對許多希臘人而言，他們不能接受一個人的身體可以死而復活，他們寧可認爲，那是一種靈魂的不朽。舒米乃和腓理徒的錯誤，可能來自一種異端，認爲基督徒所期盼身體的復活是一種強辯。但不論異教的內容爲何，它的起因都因爲以弗所的基督徒團體中，有一些成員推翻或顛覆他們原有的信仰
