--- a/The_Laymans_Bible_Commentary_23__orig.org
+++ b/The_Laymans_Bible_Commentary_23__orig.org
@@ -39,10 +39,10 @@
 
 
 ** p153
-上帝的福音 提摩太後書一章15 18節 問安( 一章152節) 對於提摩太後書的背景資料,除了這封信所提供之外,其他任何地方無從得 知。這是一封非常私人性卻又具啓示性的信。當保羅寫提摩太前書時,他還是自 由之身,他差派提摩太往以弗所去,且希望能和他在那裡儘快會合。而寫給提多 的信也是保羅能夠自由、積極從事宣教工作之時所完成的。但提摩太後書卻是保 羅身處羅馬監獄時才著作的書信。此外,比較這封信與保羅所寫作第一封監獄書 信(如歌羅西書) ,反映出截然不同的態度。當保羅第一次下監時,他正等候審 判,如同一位尚未判刑的人,仍有機會期待被釋放。但是當他第二次下監時,整 個羅馬地區對基督教的態度已經全然改變。寫這封信時,保羅已是一位被判有罪 的人, 一位被迫害教派的領袖。經過初審,他已無法倖免於死刑的結局,所以對 
+上帝的福音
+提摩太後書一章15 18節 問安(一章1-2節)
 
-
-標! 的是 他的朋友而言,接近保羅是一件很危險的事。除了路加之外,不知什麼原因,保 羅所有的朋友都離棄了他。阿尼色弗則找他找得很辛苦。在這種處境下,保羅這 封信就成爲他留給提摩太最後的遺音;不僅如此,它更像是一個偉大的使徒留給 他所服事過的教會一段最後的話語。在這封書信裡,保羅試著激勵提摩太面對迫 害,因此,他不停地描繪著一個有信心的基督徒牧者的形象。在這封寫給他主內 親愛兒子的親密信件中,保羅表達了他深切的關懷,如同他正站在人生道路的盡 頭,回頭看他作使徒的生命,以及往前看那在墳墓背後與基督同在的生命 問安的部分仍是依循著提摩太前書的格式。保羅再一次確認自己使徒的身分 而且他是基督耶穌所差派來的人。他成爲使徒並不是因爲自己的選擇,乃是憑著 上帝的旨意。至於他宣教的中心目標乃是爲了宣揚「藉著基督耶穌應許的新生 命」。他寫信給提摩太就好像寫給一位他所愛的孩子。在前書裡,保羅強調提摩 太是他在信仰中真正屬靈的兒子;在後書中,重心則轉移到他對提摩太深切的疼 愛。第2節的後半段在這兩封書信中則是相同的
+對於提摩太後書的背景資料，除了這封信所提供之外，其他任何地方無從得知。這是一封非常私人性卻又具啓示性的信。當保羅寫提摩太前書時，他還是自由之身，他差派提摩太往以弗所去，且希望能和他在那裡儘快會合。而寫給提多的信也是保羅能夠自由、積極從事宣教工作之時所完成的。但提摩太後書卻是保羅身處羅馬監獄時才著作的書信。此外，比較這封信與保羅所寫作第一封監獄書信(如歌羅西書) ，反映出截然不同的態度。當保羅第一次下監時，他正等候審判，如同一位尚未判刑的人，仍有機會期待被釋放。但是當他第二次下監時，整個羅馬地區對基督教的態度已經全然改變。寫這封信時，保羅已是一位被判有罪的人， 一位被迫害教派的領袖。經過初審，他已無法倖免於死刑的結局，所以對他的朋友而言，接近保羅是一件很危險的事。除了路加之外，不知什麼原因，保羅所有的朋友都離棄了他。阿尼色弗則找他找得很辛苦。在這種處境下，保羅這封信就成爲他留給提摩太最後的遺音；不僅如此，它更像是一個偉大的使徒留給他所服事過的教會一段最後的話語。在這封書信裡，保羅試著激勵提摩太面對迫害，因此，他不停地描繪著一個有信心的基督徒牧者的形象。在這封寫給他主內親愛兒子的親密信件中，保羅表達了他深切的關懷，如同他正站在人生道路的盡頭，回頭看他作使徒的生命，以及往前看那在墳墓背後與基督同在的生命問安的部分仍是依循著提摩太前書的格式。保羅再一次確認自己使徒的身分而且他是基督耶穌所差派來的人。他成爲使徒並不是因爲自己的選擇，乃是憑著上帝的旨意。至於他宣教的中心目標乃是爲了宣揚「藉著基督耶穌應許的新生命」。他寫信給提摩太就好像寫給一位他所愛的孩子。在前書裡，保羅強調提摩太是他在信仰中真正屬靈的兒子；在後書中，重心則轉移到他對提摩太深切的疼愛。第2節的後半段在這兩封書信中則是相同的
 
 ** p156
 給我們的靈不使我們膽怯；相反地，他的靈會使我們充滿力量，愛心和自制。」當保羅和提摩太領受聖職的時候，他們便接受了從天而來屬靈的供養，使他們的靈魂得著力量、愛和自制。
