--- a/Calvin_Institutes_3_21__orig.org
+++ b/Calvin_Institutes_3_21__orig.org
@@ -30,23 +30,26 @@
 
 　　當我們提到神的預知時，我們的意思是，萬物從永遠到永遠都在神眼前，所以對祂的知識而言，沒有未來也沒有過去，反而萬事都是現在進行式。且這意思是神不但用意念思考萬事，就如我們思考我們所記住的事一般，祂也看萬事就如這一切正在祂眼前，且這預知包括全宇宙的每一個受造物。我們稱預定論為神自己決定各人一生將如何的永恆預旨，因神不是以同樣的目的創造萬人，祂預定一些人得永生，且預定其他的人永遠滅亡。因此，既然每一個人都是為了這兩種目的其中之一被創造，所以我們說他被預定得生命或受死。
 
-　　神啟示祂的預定包括所有的人，也以亞伯拉罕的整個後裔作比
+　　神啟示祂的預定包括所有的人，也以亞伯拉罕的整個後裔作比方，證明各國的未來都是祂決定的：「至高者將地業賜給列邦，將世人分開......耶和華的分本是祂的百姓；祂的產業本是雅各。」(申三二8-9 p.，cf. Vg.)這分開是顯而易見的，在亞伯拉罕身上，就如神選擇了已枯萎的樹幹，祂特別揀選了一個種族，而拒絕了其他種族。祂沒有啟示其理由，只是摩西教導以色列之所以與眾不同，完全是出於神白白的慈愛，免得亞伯拉罕的後裔自誇。他宣告神拯救他們的原因是：神愛族長，「所以揀選他們的後裔」(申四37 )。 
 
-方，證明各國的未來都是祂決定的： 選擇產業，就是祂所愛之雅各的榮 至高者將地業賜給列邦，將世人分 耀。」(詩四七4.cf. Comm. )一切神賞 開......耶和華的分本是祂的百姓；祂 賜屬靈恩賜的人，都承認這些恩賜是 的產業本是雅各。」(申三二8-9 p.， cf. 出於神白白的愛，因他們知道這一切 Vs.)這分開是顯而易見的，在亞伯拉 不是他們應得的，也知道連雅各這聖 罕身上，就如神選擇了已枯萎的樹 潔的族長自己的美德，仍不配神賞賜 幹，祂特別揀選了一個種族，而拒絕 他和他的後裔這崇高的尊榮。神自己 了其他種族。祂沒有啟示其理由，只 也說他們完全不應得這福分，因他們 是摩西教導以色列之所以與眾不同， 是頑梗、硬著頸項的百姓(出三二9； 完全是出於神白白的慈愛，免得亞伯 cf，申九6)，祂這樣說是為了更有效地 拉罕的後裔自誇。他宣告神拯救他們 根除他們的驕傲。此外，先知經常提 的原因是：神愛族長，「所以揀選他 醒猶太人他們是神的選民，為了提醒 們的後裔」(申四37 )。 他們：他們已從這揀選上墮落了(cf. 他在另一章中更詳細地教導： 摩三2)，雖然這激怒猶太人 「耶和華專愛你們，揀選你們，並非 無論如何，我要請一切主張神的 因你們的人數多於別族……只因耶和 揀選是人的善行所應得的人留意，既 華愛你們。」(申七7-8 p.， cf. Vg.)摩西 然聖經記載神愛一國勝過其他國，也 經常重複同樣的教導：「看哪，天和 記載神所揀選的是卑賤，甚至是邪 天上的天，地和地上所有的，都屬耶 惡、頑梗的人，難道他們要因神喜悅 和華-你的神。耶和華但喜悅你的 彰顯自己的憐憫而指控祂嗎？但他們 列祖，愛他們，從萬民中揀選他們的 的咆哮必不能攔阻神的事工，他們對 後裔，就是你們。」(+-014-15， cf. 天怒罵也無法使神的公正受玷污。這 Vs.)。同樣，摩西在另一處勸他們成 些辱罵反而將落在他們身上！此外， 聖，因神揀選他們做祂的子民(申七 當神要以色列人感謝祂，或盼望來世 6)。在另一處經文中，他又宣告神保 的永生時，祂就提醒他們這白白恩約 護他們是出於祂的愛(申二三5)。信 的原則17。先知說：「我們是祂造 徒也都一生宣告這真理：「祂為我們 的，並不是自己造的；我們是祂的 17關於恩典之約，參閱1. 6. 1， note 3： ll. 10.1， note 1； IL11. 4， note 6； Ill. 14. 6， note 6： Ill. I7 6；和以下的第6-7段。又參閱L. Goumaz， La Doctrine du salut， pp. 151 ff.； Heppe RD， ch. 16. T. F. Torrance， The School of Faith， Introduction， pp. 1.63， 73， 120 f 778 
+　　他在另一章中更詳細地教導：「耶和華專愛你們，揀選你們，並非因你們的人數多於別族……只因耶和華愛你們。」(申七7-8 p.，cf. Vg.)摩西經常重複同樣的教導：「看哪，天和天上的天，地和地上所有的，都屬耶和華——你的神。耶和華但喜悅你的列祖，愛他們，從萬民中揀選他們的後裔，就是你們。」(申一O14-15，cf. Vg.)。同樣，摩西在另一處勸他們成聖，因神揀選他們做祂的子民(申七6)。在另一處經文中，他又宣告神保護他們是出於祂的愛(申二三 5)。信
+徒也都一生宣告這真理：「祂為我們選擇產業，就是祂所愛之雅各的榮耀。」(詩四七4，cf. Comm.)一切神賞賜屬靈恩賜的人，都承認這些恩賜是出於神白白的愛，因他們知道這一切不是他們應得的，也知道連雅各這聖潔的族長自己的美德，仍不配神賞賜他和他的後裔這崇高的尊榮。神自己也說他們完全不應得這福分，因他們是頑梗、硬著頸項的百姓(出三二9；cf.申九6)，祂這樣說是為了更有效地根除他們的驕傲。此外，先知經常提醒猶太人他們是神的選民，為了提醒他們：他們已從這揀選上墮落了(cf. 摩三2)，雖然這激怒猶太人。
 
+　　無論如何，我要請一切主張神的揀選是人的善行所應得的人留意，既然聖經記載神愛一國勝過其他國，也記載神所揀選的是卑賤，甚至是邪惡、頑梗的人，難道他們要因神喜悅彰顯自己的憐憫而指控祂嗎？但他們的咆哮必不能攔阻神的事工，他們對天怒罵也無法使神的公正受玷污。這些辱罵反而將落在他們身上！此外，當神要以色列人感謝祂，或盼望來世的永生時，祂就提醒他們這白白恩約的原則。先知說：「我們是祂造的，並不是自己造的；我們是祂的民，也是祂草場的羊。」(詩一OO3；cf. Comm. ；詩九九3，Vg.)他加上「不是自己造的」並不是多餘的，因這教導我們的神，不但是他們一切豐盛福分的來源，也告訴我們，祂善待他們的理由在於祂自己，因他們完全不應得這大尊榮。
+　　先知也以這句話勸他們以神白白的恩賜為足：「祂僕人亞伯拉罕的後裔，祂所揀選雅各的子孫。」(詩一○五6：詩一○四6，Vg.)並且當先知記載神不斷的祝福是祂揀選的果實後，他的結論是神如此慷慨，「都因祂記念祂的聖言」(詩一○五42)。教會所唱的詩也與這教義完全一致：「因為他們不是靠自己的刀劍得地土；也不是靠自己的膀臂得勝，乃是靠你的右手，你的膀臂，和你臉上的亮光，因為你喜悅他們。」(詩四四3，1)我們應當留意「地土」是某種象徵，代表神將他們分別為聖、收養他們。大衛在另
+處也一樣勸百姓感謝神：「以耶和華為神的，那國是有福的！祂所揀選為自己産業的，那民是有福的！」(詩三三12)撒母耳也以此教義勸他們盼望神：「耶和華既喜悅選你們作祂的子民，就必因祂的大名不撇棄你們。」(撒上一二 22 p.)當大衛的信心受攻擊時，他也以這教義與魔鬼作戰：「祢所揀選的人......必住在祢的院中。」(詩六五 4；cf. Comm. ；六四 5，Vg.)此外，因神的揀選(這奧秘是以色列人從埃及和巴比倫被釋放，以及神對他們一切的祝福所證實的)，以賽亞這樣運用「揀選」這一詞：「耶和華要憐恤雅各，必再揀選以色列。」(赛一四1 p.，cf. Vg.)在描述以色列的未來時，以賽亞宣告：雖然神似乎撇棄以色列人，但祂卻要將剩下的餘數聚集歸一，且這將證明祂的揀選必不落空，雖然當時這揀選看起來是落空了。當神在另一處說：「我揀選你，並不棄絕你」(賽四一 9)，神在強調祂一直以父親般的愛不斷慷慨地恩待以色列人。《撒迦利亞書》中的天使更清楚地表明這真理：「耶和華……也必再揀選耶路撒冷。」(撒二12)這好像在說神更嚴厲的管教證明祂棄絶了以色列，或以色列被擄掠斷絕了神對他們的揀選。但神的選召是沒有後悔的，雖然我們有時看不見祂揀選的證據。
 
-民，也是祂草場的羊。」(詩-00 3 ； 此外，因神的揀選(這奧秘是以色列 cf Comm. ；詩九九3.Vg.)他加上「不是 人從埃及和巴比倫被釋放，以及神對 自己造的」並不是多餘的，因這教導 他們一切的祝福所證實的)，以賽亞 我們的神，不但是他們一切豐盛福分 這樣運用「揀選」這一詞：「耶和華 的來源，也告訴我們，祂善待他們的 要憐恤雅各，必再揀選以色列。」(赛 理由在於祂自己，因他們完全不應得 一四1 p.cf. Vg.)在描述以色列的未來 這大尊榮 時，以賽亞宣告：雖然神似乎撇棄以 先知也以這句話勸他們以神白白色列人，但祂卻要將剩下的餘數聚集 的恩賜為足：「祂僕人亞伯拉罕的後 歸一，且這將證明祂的揀選必不落 裔，祂所揀選雅各的子孫。」(詩一○ 空，雖然當時這揀選看起來是落空 五6：詩一○四6.Vg. )並且當先知記載 了。當神在另一處說：「我揀選你， 神不斷的祝福是祂揀選的果實後，他 並不棄絕你」(賽四一9)，神在強調祂 的結論是神如此慷慨，「都因祂記念 一直以父親般的愛不斷慷慨地恩待以 祂的聖言」(詩一○五42)。教會所唱的 色列人。《撒迦利亞書》中的天使更 詩也與這教義完全一致：「因為他們 清楚地表明這真理：「耶和華……也 不是靠自己的刀劍得地土；也不是靠 必再揀選耶路撒冷。」(撒二12)這好 自己的膀臂得勝，乃是靠你的右手， 像在說神更嚴厲的管教證明祂棄絶了 你的膀臂，和你臉上的亮光，因為你 以色列，或以色列被擄掠斷絕了神對 喜悅他們。」(詩四四311)我們應當 他們的揀選。但神的選召是沒有後悔 留意「地土」是某種象徵，代表神將 的，雖然我們有時看不見祂揀選的證 他們分別為聖、收養他們。大衛在另 據 處也一樣勸百姓感謝神：「以耶和 華為神的，那國是有福的！祂所揀選 6神對個別以色列人的揀選和遺棄 為自己産業的，那民是有福的！」 e我們現在要解釋第二種更為狹 三三12)撒母耳也以此教義勸他們盼 窄的神的揀選，或那更顯示出神特殊 望神：「耶和華既喜悅選你們作祂的 恩典的揀選，即神從亞伯拉罕的同一 子民，就必因祂的大名不撇棄你 個種族中棄絕了一些人，卻叫其他人 們。」(撒上一一22p)當大衛的信心受 作祂的兒女，聚集他們到祂的教會 攻擊時，他也以這教義與魔鬼作戰： 裡。以實瑪利在一開始與他的兄弟以 祢所揀選的人......必住在祢的院 撒有同等的地位，因神一樣以割禮印 中。」(詩六五4：cf. Comm. ；六四5.Vg. ) 記祂的恩約。以實瑪利之後被棄絕， "第XXI章， 779 
+** 6神對個別以色列人的揀選和遺棄
+　　我們現在要解釋第二種更為狹窄的神的揀選，或那更顯示出神特殊恩典的揀選，即神從亞伯拉罕的同一個種族中棄絕了一些人，卻叫其他人作祂的兒女，聚集他們到祂的教會裡。以實瑪利在一開始與他的兄弟以撒有同等的地位，因神一樣以割禮印記祂的恩約。以實瑪利之後被棄絕，再來是以掃，最後是無數的群眾，甚至幾乎整個以色列都被棄絕了。從以撒生的才被稱為神的後裔，這呼召也同樣繼續在雅各身上。神也在掃羅的身上彰顯祂的棄絕。詩篇奇妙地宣告這真理：「祂棄掉約瑟的帳棚，不揀選以法蓮支派，卻揀選猶大支派。」(詩七八67-68；cf. LXX；詩七七67-68，Vg.和Comm.)聖經多次記載這真理，好讓我們在這區分中更清楚明白神的恩典——這奇妙的奧祕。我承認以實瑪利、以掃，和其他被遺棄的人，是因自己的過錯和罪惡無法得兒子的名分。因神所設立的條件是要忠心謹守神的約，但他們卻不信地違背了。但這並不影響神祝福祂從萬國中特選的以色列國，就如詩篇所記載的：「別國祂都沒有這樣待過；至於祂的典章，他們向來沒有知道。」(詩一四七20，cf. LXX)
 
+　　我們有極好的理由在此留意兩種揀選。神揀選全以色列國時，就證明祂的慷慨是自由的，不受任何轄制，好讓我們毫無根據要求神同樣恩待每一個人。神之所以不同等恩待每一個人，就證明神的恩典是自由的。因這緣故，瑪拉基強調以色列人的忘恩負義，因神不但從萬國中揀選他們，也從亞伯拉罕聖潔的家族中特選他們作自己的百姓，但他們卻不忠實，甚至褻瀆地藐視神——他們慈愛的父。「以掃不是雅各的哥哥嗎？我卻愛雅各，惡以掃。」(瑪一2-3；羅九13)神在此認為他們既都是同一位敬虔之父所生，都是祂恩約的後嗣，簡言之是同一棵聖潔之樹的兩根樹枝，所以雅各之子受這樣大的祝福，也就負更大的責任，是理所當然的，但當神拒絕了長子以掃，而揀選了他們的父雅各作後嗣(雖然他生來的位分是較卑微的)之後，神指控他們是加倍地忘恩負義，因他們棄絕了神雙重的揀選。
 
-再來是以掃，最後是無數的群眾，甚 「以掃不是雅各的哥哥嗎？我卻愛雅 至幾乎整個以色列都被棄絕了。從以 各，惡以掃。」(瑪一2-3 ；羅九！ 撒生的才被稱為神的後裔，這呼召也在此認為他們既都是同一位敬虔之父 同樣繼續在雅各身上。神也在掃羅的 所生，都是祂恩約的後嗣，簡言之 身上彰顯祂的棄絕。詩篇奇妙地宣告 是同一棵聖潔之樹的兩根樹枝，所以 這真理：「祂棄掉約瑟的帳棚，不揀 雅各之子受這樣大的祝福，也就負更 選以法蓮支派，卻揀選猶大支派。」 大的責任，是理所當然的，但當神拒 (詩七八67-68 ； cf. LXX：詩七七67-68 ， 絕了長子以掃，而揀選了他們的父雅 Vy和Comm.)聖經多次記載這真理， 各作後嗣(雖然他生來的位分是較卑 好讓我們在這區分中更清楚明白神的 微的)之後，神指控他們是加倍地忘 恩典-這奇妙的奧祕。我承認以實 恩負義，因他們棄絕了神雙重的揀 瑪利、以掃，和其他被遺棄的人，是 選。 因自己的過錯和罪惡無法得兒子的名 分。因神所設立的條件是要忠心謹守 7個人的揀選才是真實的揀選 神的約，但他們卻不信地違背了。但 e雖然我們迄今已確實明白，神 這並不影響神祝福祂從萬國中特選的 以祂隱密的計畫，照自己所喜悅的 以色列國，就如詩篇所記載的：「別 白白揀選某些人，而棄絕其他的 國祂都沒有這樣待過；至於祂的典 但在我們解釋個人的揀選之前，我們 章，他們向來沒有知道。」(詩一四七 對神揀選的解釋仍不完整。神不但提 供他們救恩，也預定之，甚至他們無 20 ， cf. LXX) 我們有極好的理由在此留意兩種 疑必將蒙恩，這些人是保羅所說神應 揀選。神揀選全以色列國時，就證明 許的後裔(cf.羅九7-8 ：加三16ff.)-神 祂的慷慨是自由的，不受任何轄制， 賜亞伯拉罕兒子的名分，雖然他許多 好讓我們毫無根據要求神同樣恩待每 的後裔被棄絕就如腐爛的枝子，然而 一個人。神之所以不同等恩待每一個 為了證明神的揀選是有效和永久的， 人，就證明神的恩典是自由的。因這 我們必須留意神所揀選的元首-主 緣故，瑪拉基強調以色列人的忘恩負 耶穌基督，因為父神在基督裡將祂的 義，因神不但從萬國中揀選他們，也 選民聚集歸一，並以無法被破壞的聯 從亞伯拉罕聖潔的家族中特選他們作 合，使他們與自己和好。所以，雖然 自己的百姓，但他們卻不忠實，甚至 神慷慨地恩待亞伯拉罕的後裔，而拒 褻瀆地藐視神-他們慈愛的父。 絕恩待其他人，但在基督的肢體上 780 
+** 7個人的揀選才是真實的揀選
+　　雖然我們迄今已確實明白，神以祂隱密的計畫，照自己所喜悅的，白白揀選某些人，而棄絕其他的人，但在我們解釋個人的揀選之前，我們對神揀選的解釋仍不完整。神不但提供他們救恩，也預定之，甚至他們無疑必將蒙恩，這些人是保羅所說神應許的後裔(cf.羅九7-8；加三16 ff.)。神賜亞伯拉罕兒子的名分，雖然他許多的後裔被棄絕就如腐爛的枝子，然而為了證明神的揀選是有效和永久的，我們必須留意神所揀選的元首——主耶穌基督，因為父神在基督裡將祂的選民聚集歸一，並以無法被破壞的聯合，使他們與自己和好。所以，雖然神慷慨地恩待亞伯拉罕的後裔，而拒絕恩待其他人，但在基督的肢體上，我們卻看見神全能的恩典，因為基督的肢體一旦被稼接在元首身上，就永遠不會失去救恩。因此，保羅用以上《瑪拉基書》中的經文極為巧妙地推論：神雖然建立永生之約、並呼召以色列人歸向自己，但祂用了特別揀選的方式，特選他們其中的一些人，就證明祂不是以同等的恩典有效地揀選全部的以色列人(羅九13)。雖然祂說「我愛雅各」(瑪一2)是指這族長所有的後裔，因為先知在此將他們與以掃的後裔區分開來。但這與神在雅各身上預表祂有效的揀選並無衝突。保羅稱這些人為「剩下的餘數」(羅九27；一一5；cf，赛一○ 22-23)不是沒有理由的，因為我們的經驗也告訴我們，在神所呼召的眾多人當中，有許多人至終墮落，而剩下的餘數才是神真正的選民。
 
+　　要解釋為何神對以色列人一般的揀選，不一定是堅定和有效的，並不困難。神與以色列人立約，卻沒有賜給每一個以色列人重生的聖靈，使他們在這恩約中堅忍到底。有三種人，一種是神公開棄絕的，一種是神真正的選民，另一種是表面看起來屬神，卻沒有內在保守人的恩典。雖然聖經稱整個以色列國為「神的產業」(申三二9；王上八51；詩二八9：三三12；等等)，然而當中有許多是外邦人。神應許以色列作他們的父和救贖者，雖然許多以色列人離棄了祂。但神與他們立的約卻不是徒然的，因為在他們當中，神保守了一些人作祂真正的選民，這證明祂的選召「是沒有後悔的」(羅一一29)。
 
-我們卻看見神全能的恩典，因為基督 許多以色列人離棄了祂。但神與他們 的肢體一旦被稼接在元首身上，就永 立的約卻不是徒然的，因為在他們當 遠不會失去救恩。因此，保羅用以上 中，神保守了一些人作祂真正的選 《瑪拉基書》中的經文極為巧妙地推 民，這證明祂的選召「是沒有後悔的」 論：神雖然建立永生之約、並呼召以 (羅一29) 色列人歸向自己，但祂用了特別揀選 神之所以不斷地從亞伯拉罕的後 的方式，特選他們其中的一些人，就 裔中，而不是從外邦國家中有效地將 證明祂不是以同等的恩典有效地揀選 自己的教會呼召出來，是根據祂的恩 全部的以色列人(羅九13)。雖然祂說 約。雖然大多數的以色列人違背了這 「我愛雅各」(3-2)是指這族長所有 約，但祂卻保守了剩下的餘數，免得 的後裔，因為先知在此將他們與以掃 這恩約至終落空。簡言之，神對亞伯 的後裔區分開來。但這與神在雅各身 拉罕整個後裔的收養，從某一點來說 上預表祂有效的揀選並無衝突。保羅 是具體預表神對他們當中少數人更大 稱這些人為「剩下的餘數」(羅九27； 的祝福。也就是為何保羅很仔細地將 一一5 ， cf，赛一○ 22-23)不是沒有理由 亞伯拉罕肉身所生的兒女與他屬靈的 的，因為我們的經驗也告訴我們，在 兒女，用以撒為代表的選民區分開來 神所呼召的眾多人當中，有許多人至 (加四28)-這並不是說作亞伯拉罕的 終墮落，而剩下的餘數才是神真正的 後裔是徒然、無益的，若這樣說就是 侮辱神的恩約！但神不改變的計畫 要解釋為何神對以色列人一般的 就是祂照自己的美意預定人歸向祂的 揀選，不一定是堅定和有效的，並不 計畫，唯獨在乎這些屬靈的後裔。但 困難。神與以色列人立約，卻沒有賜 在我引用許多經文充分證明這觀點之 給每一個以色列人重生的聖靈，使他 前，請讀者們不要先匆促做決定 們在這恩約中堅忍到底。有三種人 種是神公開棄絕的，一種是神真正 揀選教義的總結 的選民，另一種是表面看起來屬神 b聖經明確地教導，神根據祂永 卻沒有內在保守人的恩典。雖然聖經 恆不改變的計畫，揀選了祂預定賞賜 稱整個以色列國為「神的產業」(申三 救恩的人，以及遺棄祂預定滅亡的 二9：王上八51 ；詩二八9：三三12 ；等 人。我們深信對神的選民而言，這計 等)，然而當中有許多是外邦人。神應 畫是根據祂白白的憐憫，而不是人的 許以色列作他們的父和救贖者，雖然 價值。但神以祂的公正、無可指責卻 第XXI章. 781 
+　　神之所以不斷地從亞伯拉罕的後裔中，而不是從外邦國家中有效地將自己的教會呼召出來，是根據祂的恩約。雖然大多數的以色列人違背了這約，但祂卻保守了剩下的餘數，免得這恩約至終落空。簡言之，神對亞伯拉罕整個後裔的收養，從某一點來說是具體預表神對他們當中少數人更大的祝福。也就是為何保羅很仔細地將亞伯拉罕肉身所生的兒女與他屬靈的兒女，用以撒為代表的選民區分開來(加四28)。這並不是說作亞伯拉罕的後裔是徒然、無益的，若這樣說就是侮辱神的恩約！但神不改變的計畫就是祂照自己的美意預定人歸向祂的計畫，唯獨在乎這些屬靈的後裔。但在我引用許多經文充分證明這觀點之前，請讀者們不要先匆促做決定。
 
-
-闪入 基督教要義 測不透的審判，向祂所預定滅亡的人 此彰顯他們將受怎樣的審判。我在此 關了永生的門。就神的選民而論，神 略而不談許多愚昧者為了推翻預定論 的呼召證明他們被揀選。我們也深信 的教義所捏造的幻想。我們無須反駁 他們的稱義是另一個證據，直到他們 這些幻想，因為它們本身就充分證明 得榮耀，就是這揀選的完成。然而， 它們的錯誤。我只要稍微討論知識份 就如神藉著祂的呼召和稱義，見證祂 子攻擊預定論的謬論，或可能絆倒單 的選民，同樣地，祂拒絕使祂所遺棄 純之人的謬論，或不敬虔之人用來攻 的人認識自己，或被聖靈成聖，也據 擊神公義的謬論。 
-
-
-e第XXII章 聖經對於揀選教義見證上的確認 b而且這普遍的觀念，不只是平 揀選並非出於神對人功勞的 凡人的主張，各時代的神學家們也都 預知，乃是出於萬軍之 是如此主張，我坦承這一點，免得 耶和華的計畫(1-6) 有人誤以為他們只要引用一些偉大之 人的立場，就足以反駁我們。因為神 1比較揀選與對人功勞的預知 的真理在這教義上清楚到無人能置 e(b)許多人不同意我們以上的立 疑，或嘗試引用偉人的主張來反駁。 場，特別是神對信徒白白的揀選，然 e至於其他不明白聖經的人，根 而這教義是堅定的。b一般說來，我 本就不值得我們留意，雖然他們極邪 們的仇敵以為神根據祂對人之功勞的 惡地攻擊這正統的教義，甚至他們的 預知揀選人，因此，神揀選祂預先 悖逆是無法忍受的。因為神根據祂自 知道將配得祂恩典的人；另一方面， 己的美意揀選一些人，而不揀選其他 祂預定一切祂預先知道將會犯罪和褻 的人，他們就攻擊神，但這教義若 瀆祂的人受滅亡。e如此，他們以神 是聖經明確的教導，那他們與神爭辯 的預知作帕子遮蓋祂的揀選，不但抹 有何益處呢？我們一切的教導，也是 去這教義，也否定揀選真正的源頭。 人的經驗所證明的41神總是有自由 ： Wimpina， Conrad， Sectarian errorum， hallutinationum， et schismatum concision. Anacephalaeosis (1528) Ill. Depraedestinatione I. iii， fo. R 3a，皮斯卡特(Piscator)冗長、偏 見地討論「揀選是否出於神對人預見的信心」這個問題： Disputatio theological de praedestinatione， pp. 88-172.參閱J. Wolleb， Christianae theologiae compendium 21 (Basel. 1626) ，如Heppe RD所引p. 167。 下面第8段。 參閱Pighius， De libero arbitrio VII， fo. 1 1 8b f. 加爾文的預定論教義是根據聖經，且與其觀察和經驗相符：參閱III， 24， 4， 12， 15； Doumergue， Calvin IV. 437； K. Barth， Gorres Gnadenwahl， pp. I 2 f.。在加爾文所著Eternal Predestination of God一書中出現過許多類似的句子。舉例來說，他認為這「顯而易見」 在外在呼召的人當中，信的人很少。(CR VIII， 298 f.； tr. H. Cole， Calvin's Calvinism， p.95.) "第XXII章. 783 
-
-
+** 揀選教義的總結
+　　聖經明確地教導，神根據祂永恆不改變的計畫，揀選了祂預定賞賜救恩的人，以及遺棄祂預定滅亡的人。我們深信對神的選民而言，這計畫是根據祂白白的憐憫，而不是人的價值。但神以祂的公正、無可指責卻測不透的審判，向祂所預定滅亡的人關了永生的門。就神的選民而論，神的呼召證明他們被揀選。我們也深信他們的稱義是另一個證據，直到他們得榮耀，就是這揀選的完成。然而，就如神藉著祂的呼召和稱義，見證祂的選民，同樣地，祂拒絕使祂所遺棄的人認識自己，或被聖靈成聖，也據此彰顯他們將受怎樣的審判。我在此略而不談許多愚昧者為了推翻預定論的教義所捏造的幻想。我們無須反駁這些幻想，因為它們本身就充分證明它們的錯誤。我只要稍微討論知識份子攻擊預定論的謬論，或可能絆倒單純之人的謬論，或不敬虔之人用來攻擊神公義的謬論。
