--- a/N55_Timothy_2_01__note.org
+++ b/N55_Timothy_2_01__note.org
@@ -1,18 +1,29 @@
+* 目錄
+ - [[#1.提摩太前後書導論][1.提摩太前後書導論]]
+   - [[#1.1_給牧者的信][1.1_給牧者的信]]
+   - [[#1.2_寫作時間][1.2_寫作時間]]
+   - [[#1.3_風格與內容][1.3_風格與內容]]
+   - [[#1.4_爲何作者的問題這麼重要？對作者的認定會影響解釋][1.4_爲何作者的問題這麼重要？對作者的認定會影響解釋]]
+ - [[#2.提摩太後書這本書信][2.提摩太後書這本書信]]
+   - [[#2.1_為甚麼要寫這封書信][2.1_為甚麼要寫這封書信]]
+   - [[#2.2_使徒保羅寫提摩太後書，心中是相當寂寞的。][2.2_使徒保羅寫提摩太後書，心中是相當寂寞的。]]
+   - [[#2.3_在羅馬皇帝尼祿殘酷手段逼害下，已經有不少信徒離棄了信仰。][2.3_在羅馬皇帝尼祿殘酷手段逼害下，已經有不少信徒離棄了信仰。]]
+
 * 1.提摩太前後書導論
-** 1.1 給牧者的信
+** 1.1_給牧者的信
 　　提摩太前後書和提多書素來被稱作「教牧書信」。帖撒羅尼迦前後書是寫給教會的；而提摩太前後書與提多書則是寫給個人的。然而，它們也並非純屬私人書信，而是保羅寫給提摩太和提多，教導他們如何做牧者的工作。同時，這些書信時常涉及神學，並且包括一些對教義的重要陳述。大致上來說，這些書信的觀點是極爲實際的，討論到在教會任職者的資格，辨別正確或錯誤教導的能力，以及保存福音信息的純正。其中還談到牧者工作在管理方面的細節，例如對待寡婦的方式、視群眾年齡層及階級的不同調整福音信息，以及帶領會眾禮拜。因此這些書信對於任何一個積極從事教會工作的人來說，都是有助益的。
 
-** 1.2 寫作時間
+** 1.2_寫作時間
 　　在新約中，帖撒羅尼迦後書之後爲提摩太前書，但這並不意味著提摩太前書緊接著帖撒羅尼迦後書之後即被完成。帖撒羅尼迦前後書可能是保羅書信的第一部，並且我們可合理而準確地推算其於主後五十或五十一年完成。那些認爲提摩太前後書與提多書係由保羅寫成的人，都同意這三卷書是保羅書信的最後部份。承認保羅是上述書信的作者，並不能因此保證可以準確地推算出寫作的時間；要做到這一點需要對保羅的一生做整個的重新組織。但大致上仍有一共識，認爲寫作的時間約在主後六十五至六十七年間。那些認爲保羅不是這些書信之作者的人，寫作時間的認定上有更大的出入，但其中大多數的人認爲應介於第一世紀至第二世紀中葉間。無論哪一種看法，我們都在帖撒羅尼迦前後書及提摩太前後書與提多書中，發現保羅的第一部及最後一部書信之間的對比。
 
-** 1.3 風格與內容
+** 1.3_風格與內容
 　　敏銳的讀者在研讀教牧書信時，也會察覺在寫作的風格上有不同之處。大致說來，與保羅早期的書信比較之下，教牧書信的筆調顯然較爲平和有序。即使是對假教師譴責的段落，也都相當冗長而且有點沉悶(如提摩太前書一章3-7節；提摩太後二章14-26節；三章1-9-1節；提多書一章10-14節)。在教牧書信中有些重要的段落，值得保羅以他最佳的文筆寫出，但整體看來，它們似乎缺少早期作品中那樣的衝擊與熱情。
 
 　　比風格上差異更爲重要的，是內容上的差異。仔細研究帖撒羅尼迦前後書的學者，會立即察覺到，對基督再來盼望之強調，在比重上有了改變。在帖撒羅尼迦前後書裏，幾乎每一章都可看到這種期盼，並且在許多地方都是保羅進行論證時的主要思想。教牧書信的主要關懷似乎轉變到別的主題。作者非常留意教會組織與架構，教會的紀律，已成爲教牧書信的核心。
 
 　　教牧書信的作者對於保存純正的信仰極爲關心，無論是對於假教師的抨擊、強調健全的教訓、或甚至發展「信仰的託付」的想法，都表現出這樣的關心。作者相信基督信仰的精神中，有一種「傳承」；此傳承被界定爲所接受的託付。它必須被善加守護，並且傳遞給那些努力忠心教導別人的人(提摩太前書四章6節，提摩太後書二章2節)。
 
-** 1.4 爲何作者的問題這麼重要？對作者的認定會影響解釋
+** 1.4_爲何作者的問題這麼重要？對作者的認定會影響解釋
 　　爲什麼帖撒羅尼迦前後書被公認爲保羅所寫，而提摩太前後書與提多書卻都引起爭論？雖然在此不可能對這問題提出答案，但處理一些所涉及的議題仍是必要的，因爲我們對於這些議題的態度，必會對我們現今如何理解這些書信的信息有所影響。
 
 　　一般唸新約的讀者，將會由於在書信一開頭的身分介紹，以及許多自傳式的內容，而相信教牧書信是由保羅所寫的。但特別鑽研提摩太前後書及提多書的學者，知道這當中仍有一些問題尚未獲得解答。教牧書信與其他保羅書信所使用的語言，有顯而易見的差異。的確，在希臘原文中更容易看出這項差異，但是在英文翻譯版本中也同樣看得出。一個代表性的例子，是在教牧書信中有這樣的句子：「這話是可靠，值得完全接受的」(提摩太前書一章15節；三章1節；四章9節；提摩太後書二章11節；提多書三章9節)；但這種特別的表達方式在保羅的其他書信中並未出現。除此之外，我們若仔細地研究還可以發現，在教牧書信中大概有三分之一的用語，是在保羅早期的書信中找不到的。而且，即使是在這兩類書信中都能發現的用語，在教牧書信中也有著不同的意義。舉例而言，「正義」(righteousness)這個字在教牧書信中用以形容一種道德品質(提摩太前書六章11節；提摩太後書二章22節)；但在羅馬書中，則是用以形容一種信仰的關係。在教牧書信與保羅其他書信中諸如此類的差異，使得細心的學者懷疑，這兩類書信是否真有可能出自同一人之手。
@@ -25,13 +36,13 @@
 
 　　這也是一封使徒保羅在監獄寫的書信，雖然不是像以弗所書、腓立比書、歌羅西書、腓利門書等四本同列為「獄中書信」，我們從第二章九節他提到說：「我因為傳福音而遭受苦難，甚至被捆綁，像囚犯一樣。」就可看出他已經人在監獄中服刑了。但長久以來，提摩太前、後書，以及提多書等這三本都被歸類為所謂「教牧書信」，顧名思義是談到有關在教會牧養工作的問題，主要的目的是在告訴提摩太要怎樣固守著以弗所教會，別讓那些專門在破壞正確信仰的人，在教會中得勢。
 
-** 2.1 為甚麼要寫這封書信
+** 2.1_為甚麼要寫這封書信
 　　當他第一次在羅馬等待受審之時，那時他是備受禮遇，可以在外面租屋居住，隨時有人去請問有關信仰的問題（參考使徒行傳廿八：23）。但現在則不是這樣，他是「被捆綁，像囚犯一樣」（參考提摩太後書二：9）。他這次在監獄中，雖然還沒有被審判該受怎樣的刑期，但卻可看出使徒保羅內心似乎已經有了個譜——死刑（參考四：7）可能為了這個緣故，他急切地希望能見到提摩太，要他「盡快」到羅馬監獄去看他，且最好是趕在冬季之前（參考提摩太後書四：21），可見他與提摩太之間的關係多麼地密切，他曾說提摩太是「惟一」跟他同心的福音伙伴（參考腓立比書二：22）。
 
-** 2.2 使徒保羅寫提摩太後書，心中是相當寂寞的。
+** 2.2_使徒保羅寫提摩太後書，心中是相當寂寞的。
 　　在第一章十五節，他特別提到說：「在亞細亞省的人都離棄了我，包括腓吉路和黑摩其尼在內。」在第四章十六節說：「我第一次為自己辯護的時候，沒有人在我身邊，大家都離棄了我。願上帝不加罪於他們！」腓吉路和黑摩其尼必定是在亞細亞省教會很有名望的教會領袖，意思是大多數信徒都背棄了使徒保羅。另外一個重要的同工也離開了使徒保羅，那個人就是底馬。他原本與路加都是使徒保羅的同工（參考歌羅西書四：14），為甚麼會離開？使徒保羅說他是因為「貪愛現世」（參考提摩太後書四：10）。但我們知道此時的使徒保羅心中是孤獨的，需要有人在他身邊。
 
-** 2.3 在羅馬皇帝尼祿殘酷手段逼害下，已經有不少信徒離棄了信仰。
+** 2.3_在羅馬皇帝尼祿殘酷手段逼害下，已經有不少信徒離棄了信仰。
 　　希望提摩太看待因信仰受逼害的事件，要與其他的信徒有不同的態度。他說：「你不要把為我們的主作證當作一件羞恥的事，也不要因我為了主的緣故成為囚犯而覺得羞恥。你要按照上帝所賜的力量，為福音分擔苦難。」（提摩太後書一：8）可見當時在迫害之下，離棄信仰的人中有人開始對福音所帶來的生命際遇感到難以理解，更嚴重的是將為福音受苦的事當作是一件有羞恥感的事。這種「不以福音為恥」的信仰告白，一再出現在使徒保羅傳福音的態度中。
 
 　　因此，寫這封書信也有一個主要用意，是多給一些鼓勵，即使人已經陷入囹圄中，還是盡他當福音僕人的使命。他從提摩太身上著手鼓勵做起，要他「堅守」從使徒保羅所領受得到的信息，以及和主耶穌之間連結所得到的「信心和愛心」（參考提摩太後書一：13）；要提摩太「持守」所接受的和確信的「真理」（提摩太後書三：14），並鼓勵他無論「時機理不理想都要傳，用最大的耐心勸勉，督責，鼓勵，教導」（提摩太後書四：2）。這讓我們看出，即使是像提摩太這樣值得他信任的同工，甚至可看成是「信仰上的真兒子」，也是要在迫害的時空下，多給一些鼓勵。
